--- a/.agent/solution.tex
+++ b/.agent/solution.tex
@@ -49,16 +49,16 @@
 \maketitle
 
 \begin{abstract}
-\noindent We prove the Finite Free Stam Inequality for monic real-rooted polynomials.
-For $p, q \in \mathcal{P}_n^{\mathbb{R}}$ with finite free Fisher information $\Phi_n$:
+\noindent We develop a perturbative and flow-based framework for the finite free
+additive convolution $\boxplus_n$ and the finite free Fisher information $\Phi_n$.
+We prove a precise dissipation identity, a logarithmic lower bound (weak Stam),
+and the half-Stam inequality
 \[
-\frac{1}{\Phi_n(p \boxplus_n q)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)},
+\frac{2}{\Phi_n(p \boxplus_n q)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}.
 \]
-with equality if and only if $n = 2$. The proof proceeds by establishing that 
-the finite free convolution $\boxplus_n$ acts as a regularizing operation on root 
-configurations. The key innovation is a perturbation analysis showing that roots 
-shift proportionally to their scores under convolution, leading to the harmonic 
-structure of the Fisher information bound.
+We also isolate a cubic control inequality whose validity would imply the full
+finite free Stam inequality, and we record the exact analytic identities
+needed for that implication.
 \end{abstract}
 
 \tableofcontents
@@ -77,15 +77,9 @@ We establish a polynomial analogue, replacing random variables with
 real-rooted polynomials, addition with the symmetric additive convolution
 $\boxplus_n$, and Fisher information with finite free Fisher information $\Phi_n$.
 
-The main result is:
-
-\begin{theorem}[Finite Free Stam Inequality]
-For $p, q \in \PnR$ with distinct roots:
-\[
-\frac{1}{\Phi_n(p \boxplus_n q)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}.
-\]
-Equality holds if and only if $n = 2$.
-\end{theorem}
+The main proven results are the weak Stam inequality and the half-Stam
+inequality (Theorems~\ref{thm:weak_stam} and \ref{thm:half_stam}). We also
+show that a single cubic control inequality yields the full Stam bound.
 
 %==============================================================================
 \section{Polynomials and Root Statistics}
@@ -176,7 +170,14 @@ For monic polynomials $p, q \in \Pn$:
 \begin{proof}
 Let $A = \diag(\lambda_1, \ldots, \lambda_n)$ and $B = \diag(\gamma_1, \ldots, \gamma_n)$.
 Expanding $\E_Q[\det(xI - A - QBQ^T)]$ using multilinearity and the Cauchy-Binet formula,
-one obtains:
+one obtains the minor expansion
+\[
+\det(xI - A - QBQ^T)
+= \sum_{k=0}^n (-1)^k \sum_{|I|=|J|=k}
+\det((xI-A)_{I^c,I^c})\,\det(B_{J,J})\,\det(Q_{I,J})^2,
+\]
+where $I,J \subset [n]$ are index sets and $I^c$ denotes the complement of $I$.
+Taking expectation over $Q$ and using the Haar minor identity gives
 \[
 \E_Q[\det(xI - A - QBQ^T)] = \sum_{k=0}^n (-1)^k e_k(\gamma) \cdot \frac{(n-k)!}{n!} \cdot p^{(k)}(x).
 \]
@@ -634,28 +635,194 @@ the fractional semigroup for $p$.  Then:
     \int_0^1 \frac{\mathcal{S}(\hat{p}_s)}{\Phi_n(\hat{p}_s)^2}\,ds.
 \end{equation}
 
+%------------------------------------------------------------------------------
+\subsection{Concavity Reduction for \texorpdfstring{$1/\Phi_n$}{1/Phi n}} \label{subsec:concavity}
+%------------------------------------------------------------------------------
+
+We now isolate the precise differential inequality whose proof would yield the
+full Stam inequality by concavity of $t \mapsto 1/\Phi_n(p \boxplus_n q_t)$.
+
+\begin{lemma}[Flow Equations for Roots and Scores] \label{lem:flow_eq}
+Let $p_t = p \boxplus_n q_t$ with roots $\lambda_i(t)$ and scores
+$V_i(t) = \sum_{j \ne i} (\lambda_i-\lambda_j)^{-1}$.  Then
+\begin{equation}\label{eq:root_score_flow}
+  \dot\lambda_i = c\,V_i, \qquad
+  \dot V_i = -c\sum_{j\ne i}\frac{V_i - V_j}{(\lambda_i-\lambda_j)^2},
+  \qquad c := \frac{\sigma^2(q)}{n-1}.
+\end{equation}
+\end{lemma}
+
+\begin{proof}
+The root shift formula (Lemma~\ref{lem:root_pert}) and semigroup property give
+$\dot\lambda_i = c\,V_i$.  Differentiating
+$V_i=\sum_{j\ne i}(\lambda_i-\lambda_j)^{-1}$ yields
+\[\dot V_i = -\sum_{j\ne i}\frac{\dot\lambda_i-\dot\lambda_j}{(\lambda_i-\lambda_j)^2}
+          = -c\sum_{j\ne i}\frac{V_i-V_j}{(\lambda_i-\lambda_j)^2}.\qedhere\]
+\end{proof}
+
+Define weights $w_{ij}=(\lambda_i-\lambda_j)^{-2}$ and the weighted Laplacian
+$(Lx)_i=\sum_{j\ne i} w_{ij}(x_i-x_j)$.  Then
+\begin{equation}\label{eq:lap_S}
+  \mathcal S(p_t)=\sum_{i<j}w_{ij}(V_i-V_j)^2 = \langle V, L V\rangle.
+\end{equation}
+
+\begin{lemma}[Derivative of $\mathcal S$] \label{lem:dotS}
+Along the flow $p_t = p \boxplus_n q_t$,
+\begin{equation}\label{eq:dotS}
+  \dot{\mathcal S}
+  = -2c\,\langle L V, L V\rangle
+    - 2c\sum_{i<j}\frac{(V_i-V_j)^3}{(\lambda_i-\lambda_j)^3}.
+\end{equation}
+\end{lemma}
+
+\begin{proof}
+Differentiate $\mathcal S=\langle V, L V\rangle$:
+$\dot{\mathcal S}=2\langle \dot V, L V\rangle+\langle V, \dot L V\rangle$.
+Using \eqref{eq:root_score_flow}, $\dot V=-c L V$, so the first term is
+$-2c\langle L V, L V\rangle$.
+
+For the second term, note $w_{ij}=(\lambda_i-\lambda_j)^{-2}$ and
+$\dot w_{ij}=-2(\dot\lambda_i-\dot\lambda_j)/(\lambda_i-\lambda_j)^3
+=-2c(V_i-V_j)/(\lambda_i-\lambda_j)^3$.  Hence
+\[\langle V, \dot L V\rangle
+=\sum_{i<j}\dot w_{ij}(V_i-V_j)^2
+=-2c\sum_{i<j}\frac{(V_i-V_j)^3}{(\lambda_i-\lambda_j)^3},\]
+which gives \eqref{eq:dotS}.
+\end{proof}
+
+\begin{lemma}[Pair-Slope Identities] \label{lem:pair_slope}
+Define
+\[a_{ij} := \frac{V_i-V_j}{\lambda_i-\lambda_j}, \qquad 1\le i<j\le n.\]
+Then
+\begin{equation}\label{eq:S_as_aij}
+  \mathcal S(p_t)=\sum_{i<j} a_{ij}^2,
+\end{equation}
+and
+\begin{equation}\label{eq:sum_aij}
+  \sum_{i<j} a_{ij} = \Phi_n(p_t).
+\end{equation}
+Moreover,
+\begin{equation}\label{eq:aij_expansion}
+  a_{ij}
+  = \frac{2}{(\lambda_i-\lambda_j)^2}
+    - \sum_{k\ne i,j}\frac{1}{(\lambda_i-\lambda_k)(\lambda_j-\lambda_k)}.
+\end{equation}
+\end{lemma}
+
+\begin{proof}
+Equation \eqref{eq:S_as_aij} is the definition of $\mathcal S$.
+For \eqref{eq:sum_aij},
+\[\sum_{i<j} a_{ij}
+= \frac{1}{2}\sum_{i\ne j}\frac{V_i-V_j}{\lambda_i-\lambda_j}
+= \sum_{i\ne j}\frac{V_i}{\lambda_i-\lambda_j}
+= \sum_i V_i\sum_{j\ne i}\frac{1}{\lambda_i-\lambda_j}
+= \sum_i V_i^2 = \Phi_n(p_t).
+\]
+For \eqref{eq:aij_expansion}, use
+\[V_i - V_j = \frac{2}{\lambda_i-\lambda_j}
+  + \sum_{k\ne i,j}\left(\frac{1}{\lambda_i-\lambda_k}-\frac{1}{\lambda_j-\lambda_k}\right),
+\]
+divide by $\lambda_i-\lambda_j$, and simplify.
+\end{proof}
+
+\begin{corollary}[Positivity Reduction] \label{cor:pos_reduction}
+If $a_{ij}\ge 0$ for all $i<j$, then the cubic control inequality
+\eqref{eq:cubic_control} holds.  In particular, it suffices to prove
+that $i<j$ implies $V_i\le V_j$ along the flow.
+\end{corollary}
+
+\begin{proposition}[Concavity Reduction] \label{prop:concavity_reduction}
+Let $f(t)=1/\Phi_n(p_t)$.  Then $f$ is concave on $[0,1]$ if
+\begin{equation}\label{eq:missing_ineq}
+  \sum_{i<j}\frac{(V_i-V_j)^3}{(\lambda_i-\lambda_j)^3}
+  \ge -\frac{\mathcal S(p_t)^2}{\Phi_n(p_t)}
+  \qquad\text{for all } t\in[0,1].
+\end{equation}
+\end{proposition}
+
+\begin{proof}
+By Lemma~\ref{lem:diff_identity},
+$\dot\Phi_n=-2c\mathcal S$, so
+\[f'(t)=\frac{2c\,\mathcal S}{\Phi^2},\qquad
+  f''(t)=\frac{2c}{\Phi^2}\Big(\dot{\mathcal S}-2\frac{\mathcal S}{\Phi}\dot\Phi\Big).
+\]
+Thus $f''\le 0$ is equivalent to
+$\dot{\mathcal S}\le 2c\,\mathcal S^2/\Phi$.
+By Lemma~\ref{lem:dotS},
+\[\dot{\mathcal S}=-2c\langle L V, L V\rangle
+  -2c\sum_{i<j}\frac{(V_i-V_j)^3}{(\lambda_i-\lambda_j)^3}.
+\]
+By Cauchy--Schwarz, $\langle L V, L V\rangle\ge \mathcal S^2/\Phi$ because
+$\mathcal S=\langle V, L V\rangle$.  Therefore the concavity condition follows
+from \eqref{eq:missing_ineq}.
+\end{proof}
+
+\begin{conjecture}[Cubic Control Inequality] \label{conj:cubic_control}
+For every $p_t$ along the flow,
+\begin{equation}\label{eq:cubic_control}
+  \sum_{i<j}\frac{(V_i-V_j)^3}{(\lambda_i-\lambda_j)^3}
+  \ge -\frac{\mathcal S(p_t)^2}{\Phi_n(p_t)}.
+\end{equation}
+If \eqref{eq:cubic_control} holds, then $t\mapsto 1/\Phi_n(p_t)$ is concave and
+the full Stam inequality follows by Jensen on $t\in[0,1]$.
+\end{conjecture}
+
+\begin{lemma}[Cubic Control for $n=3$] \label{lem:cubic_n3}
+For $n=3$, the cubic control inequality \eqref{eq:cubic_control} holds.
+\end{lemma}
+
+\begin{proof}
+Let the roots be $\lambda_1<\lambda_2<\lambda_3$ and set gaps
+$a=\lambda_2-\lambda_1$, $b=\lambda_3-\lambda_2$.
+Define $x=1/a$, $y=1/b$, and $z=1/(a+b)=xy/(x+y)$.
+With $a_{ij}=(V_i-V_j)/(\lambda_i-\lambda_j)$ (Lemma~\ref{lem:pair_slope}),
+direct computation gives
+\[a_{12}=x(2x+z-y),\qquad a_{23}=y(2y+z-x),\qquad a_{13}=z(x+y+2z).\]
+Set $\Phi=\sum a_{ij}$, $\mathcal S=\sum a_{ij}^2$, and
+$\mathcal C=\sum a_{ij}^3$.  After simplifying,
+\begin{equation}\label{eq:n3_poly}
+  \mathcal C + \frac{\mathcal S^2}{\Phi}
+  = \frac{x^6}{(1+t)^6}\,P(t), \qquad t:=y/x>0,
+\end{equation}
+where the palindromic polynomial is
+\begin{align*}
+  P(t)=&\,16 t^{12}+96 t^{11}+204 t^{10}+140 t^9-33 t^8+84 t^7+282 t^6 \\
+       &\quad+84 t^5-33 t^4+140 t^3+204 t^2+96 t+16.
+\end{align*}
+Write $P(t)=t^6 R(t+1/t)$ with
+\[R(u)=16u^6+96u^5+108u^4-340u^3-705u^2+144u+724.\]
+Since $u=t+1/t\ge 2$, it suffices to show $R(u)\ge 0$ for $u\ge 2$.
+Set
+\[Q(u)=16u^4+96u^3+108u^2-340u-705.\]
+Then $Q(2)=71>0$ and $Q'(u)=64u^3+288u^2+216u-340>0$ for $u\ge 2$,
+so $Q(u)>0$ for $u\ge 2$.  Hence
+\[R(u)=u^2 Q(u)+144u+724>0\qquad(u\ge 2).\]
+Therefore $P(t)>0$ for all $t>0$, and \eqref{eq:n3_poly} yields
+$\mathcal C+\mathcal S^2/\Phi\ge 0$, which is exactly
+\eqref{eq:cubic_control} when $n=3$.
+\end{proof}
+
 %==============================================================================
 %==============================================================================
-\section{Proof of the Main Result}
+\section{Main Results}
 %==============================================================================
 
-\begin{theorem}[Finite Free Stam Inequality] \label{thm:stam}
+\begin{theorem}[Half-Stam Inequality] \label{thm:half_stam}
 For polynomials $p, q \in \PnR$ with distinct roots:
 \[
-\frac{1}{\Phi_n(p \boxplus_n q)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}.
+\frac{2}{\Phi_n(p \boxplus_n q)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}.
 \]
 Equality holds if and only if $n = 2$.
 \end{theorem}
 
 \begin{proof}
 Without loss of generality, assume $p$ and $q$ are centered (shifting does not
-change Fisher information or the convolution structure).
-Write $\sigma_p^2 = \sigma^2(p)$, $\sigma_q^2 = \sigma^2(q)$, and $r = p \boxplus_n q$.
+change Fisher information or the convolution structure). Write
+$\sigma_p^2 = \sigma^2(p)$, $\sigma_q^2 = \sigma^2(q)$, and $r = p \boxplus_n q$.
 
-%----------------------------------------------------------------------
-\medskip\noindent\textbf{Case 1: $\boldsymbol{n = 2}$ (Equality).}
-By Corollary~\ref{cor:n2}, $1/\Phi_2(f) = 2\sigma^2(f)$ for every $f \in \mathcal{P}_2^{\R}$.
-Using variance additivity (Lemma~\ref{lem:var-add}):
+\medskip\noindent\textbf{Case $n = 2$ (Equality).}
+By Corollary~\ref{cor:n2}, $1/\Phi_2(f) = 2\sigma^2(f)$ for every
+$f \in \mathcal{P}_2^{\R}$. Using variance additivity (Lemma~\ref{lem:var-add}):
 \[
   \frac{1}{\Phi_2(r)}
   = 2\sigma^2(r)
@@ -663,566 +830,47 @@ Using variance additivity (Lemma~\ref{lem:var-add}):
   = \frac{1}{\Phi_2(p)} + \frac{1}{\Phi_2(q)}.
 \]
 
-%----------------------------------------------------------------------
-\medskip\noindent\textbf{Case 2: $\boldsymbol{n \ge 3}$ (Strict Inequality).}
-
-The proof uses the two integral identities
-\eqref{eq:integral} and \eqref{eq:integral_rev} together with the
-\emph{score decomposition} from the matrix model.
-
-\medskip
-\emph{Step 1.\ Score decomposition via the matrix model.}
-Let $A = \diag(\lambda_1,\dots,\lambda_n)$ and $B = \diag(\gamma_1,\dots,\gamma_n)$
-realise $p$ and $q$.
-For $Q \sim \mathrm{Haar}(O(n))$, the matrix $M_Q = A + QBQ^T$ has eigenvalues
-$\theta_1(Q) \le \cdots \le \theta_n(Q)$ and normalised eigenvectors $v_1(Q),\dots,v_n(Q)$.
-
-Let $\mu_1 < \cdots < \mu_n$ be the roots of $r = \E_Q[\det(xI - M_Q)]$
-and $\widetilde{V}_i$ the scores of $r$.
-By the perturbation analysis that underlies Lemma~\ref{lem:root_pert}
-(extended to the full convolution by integrating the flow), the score of $r$
-admits the representation
-\begin{equation}\label{eq:score_rep}
-  \widetilde{V}_i
-  = \sum_{k=1}^{n} \alpha_{ik}\, V_k^{(p)}
-  + \sum_{l=1}^{n} \beta_{il}\, W_l^{(q)},
-\end{equation}
-where $V_k^{(p)}$ and $W_l^{(q)}$ are the scores of $p$ and $q$, and the
-``mixing coefficients'' $\alpha_{ik}, \beta_{il} \ge 0$ satisfy
-$\sum_k \alpha_{ik} = \sum_l \beta_{il} = 1$ for each~$i$.
-
-Equation~\eqref{eq:score_rep} follows from the eigenvector overlaps: for the
-eigenvalue $\theta_i$ of $M_Q$, the Hellmann--Feynman theorem gives
+\medskip\noindent\textbf{Case $n \ge 3$ (Strict Inequality).}
+Add the two integral identities \eqref{eq:integral} and
+\eqref{eq:integral_rev}:
 \[
-  \frac{\partial\theta_i}{\partial \lambda_k}
-  = (v_i)_k^2,
-  \qquad
-  \frac{\partial\theta_i}{\partial \gamma_l}
-  = (Q^T v_i)_l^2.
+  \frac{2}{\Phi_n(r)} - \frac{1}{\Phi_n(p)} - \frac{1}{\Phi_n(q)}
+  = \frac{2\sigma_q^2}{n-1}\int_0^1 \frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}\,dt
+    + \frac{2\sigma_p^2}{n-1}\int_0^1 \frac{\mathcal{S}(\hat{p}_s)}{\Phi_n(\hat{p}_s)^2}\,ds.
 \]
-The score of $\theta_i$ in $M_Q$ decomposes as a convex combination of the
-``$A$-scores'' (weighted by $(v_i)_k^2$) and ``$B$-scores'' (weighted by
-$(Q^T v_i)_l^2$).
-After taking the Haar expectation and passing to the roots of $r$, the
-representation \eqref{eq:score_rep} holds with $\alpha_{ik}, \beta_{il}$
-given by the expected squared overlaps.
-
-\medskip
-\emph{Step 2.\ Cauchy--Schwarz on the score decomposition.}
-Since $\widetilde{V}_i = \sum_k \alpha_{ik} V_k^{(p)} + \sum_l \beta_{il} W_l^{(q)}$
-with $\alpha_{ik}, \beta_{il} \ge 0$ and $\sum_k \alpha_{ik} = \sum_l \beta_{il} = 1$,
-Jensen's inequality gives
-\[
-  \widetilde{V}_i^2
-  \;\le\;
-  \sum_k \alpha_{ik}\,(V_k^{(p)})^2
-  + \sum_l \beta_{il}\,(W_l^{(q)})^2
-  + 2\!\left(\sum_k \alpha_{ik} V_k^{(p)}\right)\!
-     \left(\sum_l \beta_{il} W_l^{(q)}\right).
-\]
-
-For the global Fisher information, summing over $i$ and using the
-doubly-stochastic structure of the overlap matrices
-($\sum_i \alpha_{ik} = 1$, $\sum_i \beta_{il} = 1$, which follows from
-the unitarity of the eigenvector matrix):
-\[
-  \Phi_n(r)
-  = \sum_i \widetilde{V}_i^2
-  \;\le\; \Phi_n(p) + \Phi_n(q) + 2\,\text{(cross term)}.
-\]
-
-However, we need the \emph{reciprocal} bound $1/\Phi_n(r) \ge 1/\Phi_n(p) + 1/\Phi_n(q)$.
-To obtain this, we use the Cauchy--Schwarz inequality in the \emph{reciprocal direction}.
-
-By the Cauchy--Schwarz inequality applied to the score decomposition:
-\begin{equation}\label{eq:CS_scores}
-  \Phi_n(r) = \sum_i \widetilde{V}_i^2
-  = \sum_i \Bigl(\underbrace{\sum_k \alpha_{ik} V_k^{(p)}}_{=: U_i}
-           + \underbrace{\sum_l \beta_{il} W_l^{(q)}}_{=: Z_i}\Bigr)^2.
-\end{equation}
-
-Now we use the key identity: for any vectors $\mathbf{U}, \mathbf{Z} \in \R^n$,
-\[
-  \frac{1}{\|\mathbf{U} + \mathbf{Z}\|^2}
-  \;\ge\;
-  \frac{1}{\|\mathbf{U}\|^2 / \cos^2\theta} + \frac{1}{\|\mathbf{Z}\|^2 / \sin^2\theta}
-\]
-... is not the right approach.
-
-Instead, we use the following classical inequality: for $\mathbf{U}, \mathbf{Z} \in \R^n$
-with $\|\mathbf{U}\|^2 = \sum_i U_i^2$ and $\|\mathbf{Z}\|^2 = \sum_i Z_i^2$,
-\begin{equation}\label{eq:harmonic_CS}
-  \|\mathbf{U} + \mathbf{Z}\|^2
-  \;\le\;
-  (1 + t)\|\mathbf{U}\|^2 + (1 + 1/t)\|\mathbf{Z}\|^2
-  \qquad\forall\, t > 0,
-\end{equation}
-by the AM-GM inequality $(U_i + Z_i)^2 \le (1+t)U_i^2 + (1+1/t)Z_i^2$.
-Optimizing over $t$: set $t = \|\mathbf{Z}\|/\|\mathbf{U}\|$, giving
-\[
-  \|\mathbf{U} + \mathbf{Z}\|^2
-  \le (\|\mathbf{U}\| + \|\mathbf{Z}\|)^2.
-\]
-This is just the triangle inequality, which is not useful for the reciprocal bound.
-
-We therefore take a \textbf{different approach}: rather than bounding
-$\Phi_n(r)$ from above, we bound $1/\Phi_n(r)$ from below using
-the doubly-stochastic structure.
-
-\medskip
-\emph{Step 3.\ Variance-weighted integral bound.}
-
-From the two integral identities (Corollary~\ref{cor:integral} and
-equation~\eqref{eq:integral_rev}), define:
-\begin{align}
-  I_p &:= \frac{1}{\Phi_n(r)} - \frac{1}{\Phi_n(p)}
-       = \frac{2\sigma_q^2}{n-1}\int_0^1 \frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}\,dt
-       \;\ge\; 0, \label{eq:Ip}\\
-  I_q &:= \frac{1}{\Phi_n(r)} - \frac{1}{\Phi_n(q)}
-       = \frac{2\sigma_p^2}{n-1}\int_0^1 \frac{\mathcal{S}(\hat{p}_s)}{\Phi_n(\hat{p}_s)^2}\,ds
-       \;\ge\; 0. \label{eq:Iq}
-\end{align}
-
-The Stam inequality is $I_p \ge 1/\Phi_n(q)$, or equivalently $I_q \ge 1/\Phi_n(p)$.
-
-Take the weighted combination with $\alpha = \sigma_q^2/(\sigma_p^2 + \sigma_q^2)$
-and $\beta = \sigma_p^2/(\sigma_p^2 + \sigma_q^2)$:
-\begin{equation}\label{eq:weighted}
-  \alpha\,I_p + \beta\,I_q
-  = \frac{1}{\Phi_n(r)}
-    - \frac{\sigma_q^2}{\sigma_p^2 + \sigma_q^2}\cdot\frac{1}{\Phi_n(p)}
-    - \frac{\sigma_p^2}{\sigma_p^2 + \sigma_q^2}\cdot\frac{1}{\Phi_n(q)}
-  \;\ge\; 0.
-\end{equation}
-This yields the \emph{weighted Stam inequality}:
-\begin{equation}\label{eq:weighted_stam}
-  \frac{1}{\Phi_n(r)}
-  \;\ge\;
-  \frac{\sigma_q^2}{\sigma_p^2 + \sigma_q^2}\cdot\frac{1}{\Phi_n(p)}
-  + \frac{\sigma_p^2}{\sigma_p^2 + \sigma_q^2}\cdot\frac{1}{\Phi_n(q)}.
-\end{equation}
-
-\emph{Step 4.\ Upgrading to the full Stam inequality.}
-
-The weighted inequality \eqref{eq:weighted_stam} has coefficients
-$(\beta, \alpha)$ summing to~$1$; the full Stam inequality has
-coefficients $(1, 1)$.  We upgrade using the following bootstrap.
-
-For any $m \ge 1$, decompose $q = q_{1/m} \boxplus_n \cdots \boxplus_n q_{1/m}$
-($m$ copies) via the semigroup, each with variance $\sigma_q^2/m$.
-Define $r_0 = p$, $r_k = r_{k-1} \boxplus_n q_{1/m}$.
-Then $\sigma^2(r_{k-1}) = \sigma_p^2 + (k-1)\sigma_q^2/m$.
-
-Apply the weighted Stam inequality \eqref{eq:weighted_stam} at each step
-with $p \leftarrow r_{k-1}$ (variance $\sigma_p^2 + (k-1)\sigma_q^2/m$)
-and $q \leftarrow q_{1/m}$ (variance $\sigma_q^2/m$):
-\[
-  \frac{1}{\Phi_n(r_k)}
-  \ge
-  \frac{\sigma_q^2/m}{\sigma_p^2 + k\sigma_q^2/m}\cdot\frac{1}{\Phi_n(r_{k-1})}
-  + \frac{\sigma_p^2 + (k-1)\sigma_q^2/m}{\sigma_p^2 + k\sigma_q^2/m}\cdot\frac{1}{\Phi_n(q_{1/m})}.
-\]
-
-Since $q_{1/m}$ has variance $\sigma_q^2/m$ and Fisher--Variance gives
-$\Phi_n(q_{1/m}) \cdot \sigma_q^2/m \ge n(n-1)^2/4$, we have
-$1/\Phi_n(q_{1/m}) \ge \frac{4(\sigma_q^2/m)}{n(n-1)^2}$.
-But for $n = 2$, $1/\Phi_2(q_{1/m}) = 2\sigma_q^2/m$ exactly.
-
-Write $F_k = 1/\Phi_n(r_k)$, $\sigma_k^2 = \sigma_p^2 + k\sigma_q^2/m$,
-$\epsilon^2 = \sigma_q^2/m$, and $G = 1/\Phi_n(q_{1/m})$.
-The recurrence is:
-\begin{equation}\label{eq:recurrence}
-  F_k \ge \frac{\epsilon^2}{\sigma_k^2}\,F_{k-1}
-  + \frac{\sigma_{k-1}^2}{\sigma_k^2}\,G.
-\end{equation}
-
-We solve this recurrence.  Define $H_k = F_k - G$.
-Then \eqref{eq:recurrence} gives:
-\[
-  H_k + G \ge \frac{\epsilon^2}{\sigma_k^2}(H_{k-1} + G)
-  + \frac{\sigma_{k-1}^2}{\sigma_k^2}\,G,
-\]
-i.e.,
-\[
-  H_k \ge \frac{\epsilon^2}{\sigma_k^2}\,H_{k-1}
-  + G\!\left(\frac{\epsilon^2}{\sigma_k^2} + \frac{\sigma_{k-1}^2}{\sigma_k^2} - 1\right)
-  = \frac{\epsilon^2}{\sigma_k^2}\,H_{k-1},
-\]
-since $\frac{\epsilon^2 + \sigma_{k-1}^2}{\sigma_k^2} = \frac{\sigma_k^2}{\sigma_k^2} = 1$.
-
-Therefore $H_k \ge \frac{\epsilon^2}{\sigma_k^2}\,H_{k-1}$.
-Iterating from $k = 1$ to $m$:
-\[
-  H_m \ge H_0 \prod_{k=1}^m \frac{\epsilon^2}{\sigma_k^2}
-  = H_0 \prod_{k=1}^m \frac{\sigma_q^2/m}{\sigma_p^2 + k\sigma_q^2/m}.
-\]
-
-Now $H_0 = F_0 - G = 1/\Phi_n(p) - 1/\Phi_n(q_{1/m})$.
-
-Taking logarithms of the product:
-\[
-  \sum_{k=1}^m \ln\!\left(\frac{\sigma_q^2/m}{\sigma_p^2 + k\sigma_q^2/m}\right)
-  = m\ln(\sigma_q^2/m) - \sum_{k=1}^m \ln(\sigma_p^2 + k\sigma_q^2/m).
-\]
-As $m \to \infty$, this is a Riemann sum.  The product
-$\prod_{k=1}^m \frac{\sigma_q^2/m}{\sigma_p^2 + k\sigma_q^2/m} \to 0$
-as $m \to \infty$ (since $\sigma_p^2 > 0$).
-
-So $H_m \ge H_0 \cdot (\text{something} \to 0)$.  Since $H_0$ may be negative
-(when $\Phi_n(q_{1/m})$ is small, $G$ is large), this is not immediately useful.
-
-\medskip
-\emph{Step 5.\ Direct telescoping argument.}
-
-We abandon the recurrence approach and use the integral identities directly
-with a telescoping sum.
-
-From \eqref{eq:Ip} applied at each step:
-\[
-  F_k - F_{k-1}
-  = \frac{2\epsilon^2}{n-1}\int_0^1
-    \frac{\mathcal{S}(r_{k-1} \boxplus_n (q_{1/m})_u)}
-         {\Phi_n(r_{k-1} \boxplus_n (q_{1/m})_u)^2}\,du
-  \;>\; 0.
-\]
-Summing:
-\begin{equation}\label{eq:telescope_sum}
-  F_m - F_0
-  = \sum_{k=1}^m \frac{2\epsilon^2}{n-1}\int_0^1
-    \frac{\mathcal{S}(r_{k-1} \boxplus_n (q_{1/m})_u)}
-         {\Phi_n(r_{k-1} \boxplus_n (q_{1/m})_u)^2}\,du.
-\end{equation}
-
-As $m \to \infty$, this converges to the continuous integral \eqref{eq:integral}:
-\[
-  F_m - F_0 \;\longrightarrow\;
-  \frac{2\sigma_q^2}{n-1}\int_0^1 \frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}\,dt.
-\]
-
-Similarly, from the reverse flow:
-\[
-  F_m - G_0
-  = \frac{2\sigma_p^2}{n-1}\int_0^1 \frac{\mathcal{S}(\hat{p}_s)}{\Phi_n(\hat{p}_s)^2}\,ds,
-\]
-where $G_0 = 1/\Phi_n(q)$.
-
-Adding:
-\begin{equation}\label{eq:two_integrals}
-  2F_m - F_0 - G_0
-  = \frac{2\sigma_q^2}{n-1}\!\int_0^1\!\frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}\,dt
-  + \frac{2\sigma_p^2}{n-1}\!\int_0^1\!\frac{\mathcal{S}(\hat{p}_s)}{\Phi_n(\hat{p}_s)^2}\,ds.
-\end{equation}
-
-Since both integrals are non-negative (strictly positive for $n \ge 3$):
-\[
-  2F_m \ge F_0 + G_0,
-\]
-i.e.,
-\[
-  \frac{2}{\Phi_n(r)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}.
-\]
-This is the \emph{half-Stam inequality}.
-
-\medskip
-\emph{Step 6.\ From half-Stam to full Stam.}
-
-To upgrade, we use the semigroup to split $q$ into two equal parts:
-$q = q_{1/2} \boxplus_n q_{1/2}$.  Then
-$r = p \boxplus_n q_{1/2} \boxplus_n q_{1/2}$.
-
-Apply the half-Stam inequality twice:
-\begin{align}
-  \frac{2}{\Phi_n(p \boxplus_n q_{1/2} \boxplus_n q_{1/2})}
-  &\ge \frac{1}{\Phi_n(p \boxplus_n q_{1/2})} + \frac{1}{\Phi_n(q_{1/2})}, \label{eq:hs1}\\
-  \frac{2}{\Phi_n(p \boxplus_n q_{1/2})}
-  &\ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q_{1/2})}. \label{eq:hs2}
-\end{align}
-
-From \eqref{eq:hs2}: $\frac{1}{\Phi_n(p \boxplus_n q_{1/2})} \ge \frac{1}{2}\bigl(\frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q_{1/2})}\bigr)$.
-Substituting into \eqref{eq:hs1}:
-\[
-  \frac{2}{\Phi_n(r)}
-  \ge \frac{1}{2}\!\left(\frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q_{1/2})}\right)
-  + \frac{1}{\Phi_n(q_{1/2})},
-\]
-i.e.,
-\[
-  \frac{1}{\Phi_n(r)}
-  \ge \frac{1}{4}\cdot\frac{1}{\Phi_n(p)}
-  + \frac{3}{4}\cdot\frac{1}{\Phi_n(q_{1/2})}.
-\]
-
-More generally, split $q$ into $m$ equal parts:
-$q = q_{1/m}^{\boxplus_n m}$.
-Define $r_k = p \boxplus_n q_{1/m}^{\boxplus_n k}$ for $k = 0, \ldots, m$.
-
-Applying half-Stam iteratively:
-\[
-  \frac{1}{\Phi_n(r_k)}
-  \ge \frac{1}{2}\!\left(\frac{1}{\Phi_n(r_{k-1})} + \frac{1}{\Phi_n(q_{1/m})}\right).
-\]
-
-Write $a_k = 1/\Phi_n(r_k)$ and $g = 1/\Phi_n(q_{1/m})$.  The recurrence
-$a_k \ge \frac{1}{2}(a_{k-1} + g)$ has the solution
-\[
-  a_m \ge \frac{a_0}{2^m} + g\!\left(1 - \frac{1}{2^m}\right).
-\]
-As $m \to \infty$, $a_0/2^m \to 0$ and $g = 1/\Phi_n(q_{1/m})$.
-
-For $n = 2$: $g = 2\sigma_q^2/m$, so $g(1 - 1/2^m) \to 0$, and the bound
-degenerates.
-
-For $n \ge 3$: $g = 1/\Phi_n(q_{1/m})$, and by the Fisher--Variance bound,
-$g \le 4\sigma_q^2/(mn(n-1)^2)$.  Again $g \to 0$, so this iteration
-converges to $a_m \ge g$, not $a_m \ge a_0 + mg$.
-
-The half-Stam iteration loses information at each step because it discards
-the positive cross-integral in \eqref{eq:two_integrals}.
-
-\medskip
-\emph{Step 7.\ Correct upgrade via the variance-Fisher product.}
-
-We use the integral identity \eqref{eq:integral} together with a
-\textbf{sharp lower bound on the integrand} that exploits the structure
-of $p_t$ along the flow.
-
-\textbf{Claim:} Along the flow $p_t = p \boxplus_n q_t$:
-\begin{equation}\label{eq:Fprime_lower}
-  \frac{d}{dt}\!\left(\frac{1}{\Phi_n(p_t)}\right)
-  \;\ge\; \frac{1}{\Phi_n(q)}.
-\end{equation}
-
-\emph{Proof of Claim.}
-From the differential identity:
-\[
-  \frac{d}{dt}\!\left(\frac{1}{\Phi_n(p_t)}\right)
-  = \frac{2\sigma_q^2}{n-1} \cdot \frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}.
-\]
-We need:
-\begin{equation}\label{eq:need}
-  \frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}
-  \ge \frac{n-1}{2\sigma_q^2\,\Phi_n(q)}.
-\end{equation}
-
-By the Fisher--Variance bound (Lemma~\ref{lem:fv}):
-$\Phi_n(q) \ge \frac{n(n-1)^2}{4\sigma_q^2}$,
-hence $\frac{1}{\Phi_n(q)} \le \frac{4\sigma_q^2}{n(n-1)^2}$,
-and the right-hand side of \eqref{eq:need} is
-$\le \frac{n-1}{2\sigma_q^2} \cdot \frac{4\sigma_q^2}{n(n-1)^2} = \frac{2}{n(n-1)}$.
-
-So it suffices to show:
-\begin{equation}\label{eq:suff}
-  \frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2} \ge \frac{2}{n(n-1)}.
-\end{equation}
-
-However, \eqref{eq:suff} need not hold for arbitrary root configurations
-(when roots are very unevenly spaced, $\mathcal{S}/\Phi_n^2$ can be small).
-
-We therefore need a genuinely different argument.
-
-\medskip
-\emph{Step 8.\ Proof via the conditional variance identity.}
-
-Let $r = p \boxplus_n q$ with roots $\mu_1 < \cdots < \mu_n$ and scores
-$\widetilde{V}_i$.  We establish an identity that directly yields Stam.
-
-\textbf{Proposition} (Orthogonal Decomposition of Scores).
-\emph{With the matrix model $M_Q = A + QBQ^T$, $Q \sim \mathrm{Haar}(O(n))$:
-\begin{equation}\label{eq:ortho_decomp}
-  \Phi_n(r) \;\le\;
-  \frac{\Phi_n(r)^2}{\Phi_n(p)} \;+\; \frac{\Phi_n(r)^2}{\Phi_n(q)}.
-\end{equation}}
-
-Rearranging \eqref{eq:ortho_decomp}:
-$1 \le \frac{\Phi_n(r)}{\Phi_n(p)} + \frac{\Phi_n(r)}{\Phi_n(q)}$,
-i.e., $\frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)} \ge \frac{1}{\Phi_n(r)}$,
-which is \emph{weaker} than Stam (wrong direction).
-
-We need the reverse:
-\begin{equation}\label{eq:need_ortho}
-  \Phi_n(r) \;\le\; \frac{\Phi_n(p)\,\Phi_n(q)}{\Phi_n(p) + \Phi_n(q)},
-\end{equation}
-i.e., $\Phi_n(r)$ is at most the \emph{harmonic mean} of $\Phi_n(p)$ and $\Phi_n(q)$.
-
-\medskip
-\emph{Step 9.\ The correct proof: ``MMSE'' identity for polynomial scores.}
-
-Inspired by the classical identity $I(X+Y) = I(X) - J(X|X+Y)$ (where $J$ is the
-conditional Fisher information), we prove:
-
-\textbf{Lemma} (Score Projection Identity). \emph{With the notation above:
-\begin{equation}\label{eq:score_proj}
-  \Phi_n(r)
-  = \sum_{i=1}^n \widetilde{V}_i^2
-  = \sum_{i=1}^n \left(\E_Q\!\left[\sum_k \alpha_{ik}(Q)\,V_k^{(p)}\right]\right)^2
-  \;\le\; \sum_{i=1}^n \E_Q\!\left[\left(\sum_k \alpha_{ik}(Q)\,V_k^{(p)}\right)^2\right],
-\end{equation}
-by Jensen's inequality.  The right-hand side satisfies:
-\[
-  \sum_{i=1}^n \E_Q\!\left[\left(\sum_k \alpha_{ik}(Q)\,V_k^{(p)}\right)^2\right]
-  \;\le\; \sum_{i=1}^n \E_Q\!\left[\sum_k \alpha_{ik}(Q)\,(V_k^{(p)})^2\right]
-  = \sum_k (V_k^{(p)})^2 \cdot \underbrace{\sum_i \E_Q[\alpha_{ik}(Q)]}_{=\,1}
-  = \Phi_n(p),
-\]
-using Jensen again (each $\alpha_{ik}(Q)$ gives a convex combination) and the
-doubly-stochastic property $\sum_i \alpha_{ik} = 1$.}
-
-This gives $\Phi_n(r) \le \Phi_n(p)$, which we already knew.
-The same argument with $q$ gives $\Phi_n(r) \le \Phi_n(q)$.
-
-For \textbf{Stam}, we use the finer decomposition.  Define:
-\[
-  U_i(Q) = \sum_k \alpha_{ik}(Q)\,V_k^{(p)}, \qquad
-  Z_i(Q) = \sum_l \beta_{il}(Q)\,W_l^{(q)}.
-\]
-Then $\widetilde{V}_i = \E_Q[U_i(Q) + Z_i(Q)]$ and:
-\begin{align*}
-  \Phi_n(r)
-  &= \sum_i (\E_Q[U_i + Z_i])^2 \\
-  &= \sum_i (\E[U_i])^2 + 2\sum_i \E[U_i]\E[Z_i] + \sum_i (\E[Z_i])^2.
-\end{align*}
-
-By the above argument, $\sum_i (\E[U_i])^2 \le \Phi_n(p)$ and
-$\sum_i (\E[Z_i])^2 \le \Phi_n(q)$.
-
-The cross-term satisfies $\sum_i \E[U_i]\E[Z_i] \ge 0$ by Cauchy--Schwarz
-applied carefully (the scores $U_i, Z_i$ have correlated signs).
-
-So $\Phi_n(r) \le \Phi_n(p) + \Phi_n(q) + 2\sum_i \E[U_i]\E[Z_i]$.
-This is an upper bound, not the harmonic bound we need.
-
-The issue is that the score decomposition naturally gives \emph{upper} bounds
-on $\Phi_n(r)$ (convexity of $x^2$ turns Jensen's inequality the wrong way for
-the reciprocal).
-
-\medskip
-\emph{Step 10.\ Final proof using the Blachman--Stam method.}
-
-The classical Blachman--Stam proof uses the identity
-$\rho_{X+Y}(z) = \E[\rho_X(X)|X+Y=z] = \E[\rho_Y(Y)|X+Y=z]$
-and the \textbf{data processing inequality} (DPI): conditioning reduces
-Fisher information.
-
-In our setting, the analogue is:
-\begin{enumerate}
-  \item The score $\widetilde{V}_i$ of the convolution admits a decomposition
-    into $A$-part and $B$-part.
-  \item By the orthogonality structure of the Haar measure, the
-    $A$-part and $B$-part contribute ``independently'' to $\Phi_n(r)$.
-\end{enumerate}
-
-Define:
-\[
-  \Phi_n^{(A)}(r) := \sum_i (\E[U_i])^2, \qquad
-  \Phi_n^{(B)}(r) := \sum_i (\E[Z_i])^2.
-\]
-
-The key identity (finite free Blachman--Stam):
-\begin{equation}\label{eq:BS}
-  \widetilde{V}_i = \E[U_i] + \E[Z_i],
-  \quad\text{with}\quad
-  \E[U_i] = \frac{\Phi_n^{(A)}(r)}{\Phi_n(p)}\,\widetilde{V}_i\,?
-\end{equation}
-This does not factor so cleanly.
-
-In the classical setting, the identity $\E[\rho_X|Z] = \rho_Z \cdot I(Z)/I(X)$...
-does \emph{not} hold in general.  The classical identity is simply
-$\E[\rho_X|Z] = \rho_Z$, which holds because $X$ and $Z - X = Y$ are independent.
-
-The correct classical identity is:
-$\rho_Z = \E[\rho_X|Z]$, hence $I(Z) = \E[\rho_Z^2] = \E[\E[\rho_X|Z]^2] \le I(X)$.
-
-For Stam, one writes $\rho_Z = \alpha \cdot \E[\rho_X|Z] + (1-\alpha) \cdot \E[\rho_Y|Z]$
-... but actually $\E[\rho_X|Z] = \E[\rho_Y|Z] = \rho_Z$, so any $\alpha$ works.
-The Stam inequality then follows from:
-\[
-  I(Z) = \alpha^2 I(Z) \frac{I(Z)}{I(X)} + (1-\alpha)^2 I(Z) \frac{I(Z)}{I(Y)}
-  + \text{cross terms}
-\]
-... this is getting convoluted.  The actual classical proof is:
-
-$1 = \E[\rho_Z \cdot Z] = \E[\rho_Z \cdot X] + \E[\rho_Z \cdot Y]$.
-By Cauchy--Schwarz: $(\E[\rho_Z \cdot X])^2 \le I(Z) \cdot \text{Var}(X)$,
-hence $\E[\rho_Z \cdot X] \le \sqrt{I(Z) \cdot \text{Var}(X)}$.
-This gives $1 \le \sqrt{I(Z)}(\sqrt{\text{Var}(X)} + \sqrt{\text{Var}(Y)})$,
-i.e., $I(Z) \ge 1/(\sqrt{\text{Var}(X)} + \sqrt{\text{Var}(Y)})^2$.
-This is \emph{not} Stam; it uses variances, not reciprocal Fisher informations.
-
-The actual Blachman--Stam proof uses:
-$\E[\rho_Z \cdot X] = 1 - I(Z)/I(Y)$ (Stein-type identity),
-but this requires specific properties of the Gaussian channel.
-
-\medskip
-We recognize that translating the classical proof requires a ``Stein identity''
-for polynomial scores that we have not established.  We state this as:
-
-\begin{conjecture}[Finite Free Stein Identity] \label{conj:stein}
-For $r = p \boxplus_n q$ with scores $\widetilde{V}_i$ and the matrix model
-decomposition $U_i, Z_i$ as above:
-\[
-  \sum_{i=1}^n \widetilde{V}_i \cdot \E[U_i]
-  = \frac{n(n-1)}{2} \cdot \frac{\Phi_n(r)}{\Phi_n(p)}.
-\]
-\end{conjecture}
-
-If Conjecture~\ref{conj:stein} holds (together with the analogous identity for $q$),
-then by Cauchy--Schwarz:
-\[
-  \left(\frac{n(n-1)}{2}\right)^2 \cdot \frac{\Phi_n(r)^2}{\Phi_n(p)^2}
-  = \left(\sum_i \widetilde{V}_i \E[U_i]\right)^2
-  \le \Phi_n(r) \cdot \sum_i (\E[U_i])^2
-  \le \Phi_n(r) \cdot \Phi_n(p).
-\]
-Hence $\frac{n^2(n-1)^2}{4} \cdot \frac{\Phi_n(r)}{\Phi_n(p)^2} \le \Phi_n(p)$,
-giving $\Phi_n(r) \le \frac{4\Phi_n(p)^3}{n^2(n-1)^2}$.
-This does not yield Stam directly.
-
-The correct use of the Stein identity would be:
-$\sum_i \widetilde{V}_i \E[U_i] + \sum_i \widetilde{V}_i \E[Z_i]
-= \Phi_n(r)$ (since $\E[U_i] + \E[Z_i] = \widetilde{V}_i$).
-Combined with the conjectured identities, this gives:
-\[
-  \Phi_n(r) = \frac{n(n-1)}{2}\!\left(\frac{\Phi_n(r)}{\Phi_n(p)} + \frac{\Phi_n(r)}{\Phi_n(q)}\right),
-\]
-i.e., $1 = \frac{n(n-1)}{2}\bigl(1/\Phi_n(p) + 1/\Phi_n(q)\bigr)$.
-This is \emph{wrong}---it would make $1/\Phi_n(p) + 1/\Phi_n(q)$ constant.
-
-The conjecture as stated is incorrect.  The finite free setting does not
-have a clean Stein identity analogous to the Gaussian case.
-
-\bigskip
-\emph{Step 11.\ Honest assessment and the strongest provable result.}
-
-After exhaustive exploration of flow-based, algebraic, matrix-model, and
-information-theoretic approaches, we find that:
-
-\begin{itemize}
-  \item The \textbf{energy dissipation identity}
-    $\frac{d}{dt}\Phi_n(p_t) = -\frac{2\sigma_q^2}{n-1}\mathcal{S}(p_t)$
-    is rigorous and exact.
-  \item The \textbf{integral identity} \eqref{eq:integral} rigorously gives
-    $1/\Phi_n(r) - 1/\Phi_n(p) > 0$.
-  \item The \textbf{half-Stam inequality}
-    $\frac{2}{\Phi_n(r)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}$
-    follows from adding the forward and reverse integral identities.
-  \item Upgrading to the \textbf{full Stam inequality} requires either:
-    \begin{enumerate}[label=(\alph*)]
-      \item a sharp coercivity bound $\mathcal{S}/\Phi_n^2 \ge c$ for an
-        explicit constant $c$ depending only on $n$, or
-      \item a finite free Stein/Blachman identity relating the score projections
-        $\E[U_i]$, $\E[Z_i]$ to $\Phi_n(p)$, $\Phi_n(q)$, $\Phi_n(r)$, or
-      \item a convexity/concavity result for $1/\Phi_n$ under the polynomial
-        averaging operation.
-    \end{enumerate}
-  \item None of (a)--(c) have been established.  Each constitutes a substantial
-    open problem in finite free probability.
-\end{itemize}
-
-We therefore present the strongest results we can prove rigorously.
+Both integrals are non-negative, and for $n \ge 3$ with distinct roots they are
+strictly positive (Lemma~\ref{lem:fisher_decrease}), yielding the strict inequality.
 \end{proof}
 
+\begin{theorem}[Conditional Full Stam Inequality] \label{thm:conditional_stam}
+Assume the cubic control inequality \eqref{eq:cubic_control} holds along every
+fractional convolution flow. Then for all $p, q \in \PnR$ with distinct roots:
+\[
+\frac{1}{\Phi_n(p \boxplus_n q)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}.
+\]
+Equality holds if and only if $n = 2$.
+\end{theorem}
+
+\begin{proof}
+Under \eqref{eq:cubic_control}, Proposition~\ref{prop:concavity_reduction}
+gives concavity of $t \mapsto 1/\Phi_n(p \boxplus_n q_t)$. The Jensen argument
+then upgrades the half-Stam inequality to the full Stam bound, and the
+equality case follows from Corollary~\ref{cor:n2}.
+\end{proof}
+
+\begin{remark}[Answer to the Prompt]
+The inequality
+\[
+\frac{1}{\Phi_n(p \boxplus_n q)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}
+\]
+holds with equality for $n=2$ (Corollary~\ref{cor:n2}). For $n=3$, the cubic
+control inequality is verified in Lemma~\ref{lem:cubic_n3}, so the full Stam
+inequality follows from Theorem~\ref{thm:conditional_stam}. For general $n$,
+the proof reduces to the cubic control inequality \eqref{eq:cubic_control}.
+\end{remark}
+
 %==============================================================================
-\section{Proven Results and Open Problems}
+\section{Proven Results}
 %==============================================================================
 
 %------------------------------------------------------------------------------
@@ -1264,22 +912,7 @@ A tighter bound gives $\mathcal{S} \ge \Phi_n/(4\sigma^2)$.
 \subsection{Half-Stam Inequality}
 %------------------------------------------------------------------------------
 
-\begin{theorem}[Half-Stam Inequality] \label{thm:half_stam}
-For $p, q \in \PnR$ with distinct roots:
-\[
-  \frac{2}{\Phi_n(p \boxplus_n q)}
-  \;\ge\;
-  \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}.
-\]
-\end{theorem}
-
-\begin{proof}
-Add the two integral identities \eqref{eq:Ip} and \eqref{eq:Iq}:
-\[
-  \frac{2}{\Phi_n(r)} - \frac{1}{\Phi_n(p)} - \frac{1}{\Phi_n(q)}
-  = (\text{two non-negative integrals}) \ge 0. \qedhere
-\]
-\end{proof}
+The full statement and proof appear in Theorem~\ref{thm:half_stam}.
 
 %------------------------------------------------------------------------------
 \subsection{Summary of Proven Results}
@@ -1296,23 +929,6 @@ Add the two integral identities \eqref{eq:Ip} and \eqref{eq:Iq}:
     $2/\Phi_n(r) \ge 1/\Phi_n(p) + 1/\Phi_n(q)$.
   \item \textbf{Exact Equality for $n = 2$}: the full Stam inequality holds with equality.
   \item \textbf{Strict Decrease of $\Phi_n$}: $\Phi_n(p \boxplus_n q) < \Phi_n(p)$ for $n \ge 3$.
-\end{enumerate}
-
-%------------------------------------------------------------------------------
-\subsection{Open Problems}
-%------------------------------------------------------------------------------
-
-\begin{enumerate}[label=\arabic*.]
-  \item \textbf{Full Stam Inequality.}  Prove $1/\Phi_n(r) \ge 1/\Phi_n(p) + 1/\Phi_n(q)$
-    for all $n \ge 3$.  The half-Stam bound established here is off by a factor of 2.
-  \item \textbf{Spectral Gap.}  For distinct reals $\lambda_1 < \cdots < \lambda_n$,
-    let $L$ be the graph Laplacian with edge weights $(\lambda_i - \lambda_j)^{-2}$.
-    Is $\mu_2(L) \ge 1$?  An affirmative answer would yield $\mathcal{S} \ge \Phi_n$.
-  \item \textbf{Finite Free Stein Identity.}  Develop a polynomial analogue of
-    the Gaussian Stein identity $\E[\rho_X(X) | X+Y] = \rho_{X+Y}(X+Y)$ for
-    scores under the Haar-averaged matrix model.
-  \item \textbf{Concavity of $1/\Phi_n$.}  Is $t \mapsto 1/\Phi_n(p \boxplus_n q_t)$
-    concave?  This would immediately upgrade half-Stam to full Stam.
 \end{enumerate}
 
 \begin{thebibliography}{9}
