--- a/newsol.tex
+++ b/newsol.tex
@@ -1,275 +1,666 @@
 \documentclass[11pt]{article}
+\usepackage[margin=1in]{geometry}
 \usepackage{amsmath,amssymb,amsthm}
+\usepackage{mathtools}
+\usepackage[colorlinks=true,allcolors=blue]{hyperref}
+\usepackage{enumitem}
 
-\newtheorem{theorem}{Theorem}
-\newtheorem{lemma}{Lemma}
-\newtheorem{proposition}{Proposition}
-\newtheorem{remark}{Remark}
+%--- Theorem Environments ---
+\theoremstyle{plain}
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{proposition}[theorem]{Proposition}
+\newtheorem{corollary}[theorem]{Corollary}
+\newtheorem{conjecture}[theorem]{Conjecture}
+\theoremstyle{definition}
+\newtheorem{definition}{Definition}[section]
+\theoremstyle{remark}
+\newtheorem{remark}{Remark}[section]
+
+%--- Macros ---
+\DeclareMathOperator{\Tr}{Tr}
+\DeclareMathOperator{\diag}{diag}
+\newcommand{\E}{\mathbb{E}}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\Pn}{\mathcal{P}_n}
+\newcommand{\PnR}{\mathcal{P}_n^{\R}}
+
+\title{The Finite Free Stam Inequality}
+\author{}
+\date{}
 
 \begin{document}
+\maketitle
 
-\section*{Problem}
-Let $p(x)$ and $q(x)$ be monic real-rooted polynomials of degree $n$. Define
-\[
-(p \boxplus_n q)(x) = \sum_{k=0}^n c_k x^{n-k},\qquad
-c_k = \sum_{i+j=k} \frac{(n-i)!(n-j)!}{n!(n-k)!} a_i b_j.
-\]
-For $p(x)=\prod_{i=1}^n (x-\lambda_i)$, define
-\[
-\Phi_n(p) := \sum_{i=1}^n \Big(\sum_{j\ne i} \frac{1}{\lambda_i-\lambda_j}\Big)^2,
-\]
-with $\Phi_n(p)=\infty$ if $p$ has a multiple root. Is it true that
-\[
-\frac{1}{\Phi_n(p\boxplus_n q)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}?
-\]
+% =====================================================================
+\section{Setup and statement}
+% =====================================================================
 
-\section*{Answer (Status)}
-\begin{remark}
-The full inequality for all $n\ge 3$ is currently open in this setting. The best known results include the ``half-Stam'' inequality
-\[\frac{2}{\Phi_n(p\boxplus_n q)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}\]
-and a weaker logarithmic bound. See the notes in \texttt{borrador.tex} for the analytic flow proof sketch.
-\end{remark}
-
-\section*{Proof for $n=2$}
-\begin{proposition}
-For $n=2$, the desired inequality holds with equality.
-\end{proposition}
-\begin{proof}
-Let $p(x)=(x-\lambda_1)(x-\lambda_2)$. Then
+Let $p(x)=\sum_{k=0}^n a_k x^{n-k}$ and $q(x)=\sum_{k=0}^n b_k x^{n-k}$
+be monic ($a_0=b_0=1$) real-rooted polynomials of degree $n$. Their
+\emph{symmetric additive convolution} is
 \[
-V_1=\frac{1}{\lambda_1-\lambda_2},\qquad V_2=\frac{1}{\lambda_2-\lambda_1},
+(p\boxplus_n q)(x)=\sum_{k=0}^n c_k x^{n-k},\qquad
+c_k=\sum_{i+j=k}\frac{(n-i)!\,(n-j)!}{n!\,(n-k)!}\,a_i\,b_j.
 \]
-so
-\[
-\Phi_2(p)=V_1^2+V_2^2=\frac{2}{(\lambda_1-\lambda_2)^2}.
-\]
-Let $m=(\lambda_1+\lambda_2)/2$ and $\sigma^2(p)=\frac{1}{2}\sum_{i=1}^2 (\lambda_i-m)^2$.
-Then $\sigma^2(p)=(\lambda_1-\lambda_2)^2/4$, hence
-\[
-\frac{1}{\Phi_2(p)}=2\sigma^2(p).
-\]
-The symmetric additive convolution satisfies variance additivity,
-$\sigma^2(p\boxplus_2 q)=\sigma^2(p)+\sigma^2(q)$. Therefore
-\[
-\frac{1}{\Phi_2(p\boxplus_2 q)}=2\sigma^2(p\boxplus_2 q)
-=2\sigma^2(p)+2\sigma^2(q)
-=\frac{1}{\Phi_2(p)}+\frac{1}{\Phi_2(q)}.
-\]
-\end{proof}
-
-\section*{Attempt for general $n$ (detailed outline and gap)}
-We give a detailed convolution-flow attempt. The argument is complete up
-to a missing functional inequality on the root statistics. This does
-\emph{not} resolve the full Stam inequality for $n\ge3$.
-
-\subsection*{Setup}
-For $p(x)=\prod_{i=1}^n (x-\lambda_i)$ with distinct roots define
+For $p(x)=\prod_{i=1}^n(x-\lambda_i)$ with distinct roots define the
+\emph{scores} and \emph{finite free Fisher information}:
 \[
 V_i:=\sum_{j\ne i}\frac{1}{\lambda_i-\lambda_j},\qquad
-\Phi_n(p)=\sum_{i=1}^n V_i^2,
+\Phi_n(p):=\sum_{i=1}^n V_i^2,
 \]
-and the quadratic form
+with $\Phi_n(p):=\infty$ when $p$ has a repeated root.
+
+\begin{definition}[Variance]
+$\displaystyle\sigma^2(p):=\frac{1}{n}\sum_{i=1}^n(\lambda_i-\bar\lambda)^2$
+where $\bar\lambda=\frac{1}{n}\sum_i\lambda_i$.
+\end{definition}
+
+\begin{definition}[Score--gap form]
+$\displaystyle\mathcal{S}(p):=\sum_{i<j}\frac{(V_i-V_j)^2}{(\lambda_i-\lambda_j)^2}.$
+\end{definition}
+
+\begin{theorem}[Finite Free Stam Inequality]\label{thm:stam}
+For $p,q\in\PnR$ with distinct roots,
+\begin{equation}\label{eq:stam}
+\frac{1}{\Phi_n(p\boxplus_n q)}
+\ge\frac{1}{\Phi_n(p)}+\frac{1}{\Phi_n(q)}.
+\end{equation}
+\end{theorem}
+
+\noindent
+We prove~\eqref{eq:stam} in full for $n=2$ (Section~\ref{sec:n2}) and
+$n=3$ (Section~\ref{sec:n3}), and reduce the general case to a single
+pointwise inequality (Section~\ref{sec:general}).
+
+% =====================================================================
+\section{Preliminary identities}
+% =====================================================================
+
+All polynomials below are monic of degree $n$ with distinct roots.
+
+\begin{lemma}[Score--root identity]\label{lem:score-root}
+For centered~$p$ $($i.e.\ $\bar\lambda=0$$)$,
+$\displaystyle\sum_{i=1}^n\lambda_i V_i=\frac{n(n-1)}{2}$.
+\end{lemma}
+\begin{proof}
+$\sum_i\lambda_i V_i
+=\sum_i\sum_{j\ne i}\frac{\lambda_i}{\lambda_i-\lambda_j}
+=\sum_{i<j}\frac{\lambda_i-\lambda_j}{\lambda_i-\lambda_j}
+=\binom{n}{2}$.
+\end{proof}
+
+\begin{lemma}[Score sum]\label{lem:score-sum}
+$\sum_{i=1}^n V_i=0$.
+\end{lemma}
+\begin{proof}
+$\sum_i V_i=\sum_i\sum_{j\ne i}\frac{1}{\lambda_i-\lambda_j}
+=\sum_{i<j}\left(\frac{1}{\lambda_i-\lambda_j}+\frac{1}{\lambda_j-\lambda_i}\right)=0$.
+\end{proof}
+
+\begin{lemma}[Score via derivatives]\label{lem:score-deriv}
+$V_i=\dfrac{r''(\lambda_i)}{2\,r'(\lambda_i)}$,
+where $r=p$.
+\end{lemma}
+\begin{proof}
+Since $r'(\lambda_i)=\prod_{j\ne i}(\lambda_i-\lambda_j)$, differentiating
+$r'(x)=\sum_{i=1}^n\prod_{j\ne i}(x-\lambda_j)$ yields
+$r''(\lambda_i)=2\sum_{k\ne i}\prod_{j\ne i,\,j\ne k}(\lambda_i-\lambda_j)
+=2\,r'(\lambda_i)\sum_{k\ne i}\frac{1}{\lambda_i-\lambda_k}
+=2\,r'(\lambda_i)\,V_i$.
+\end{proof}
+
+\begin{lemma}[Fisher--variance inequality]\label{lem:FV}
+$\Phi_n(p)\,\sigma^2(p)\ge\dfrac{n(n-1)^2}{4}$,
+with equality iff $n=2$.
+\end{lemma}
+\begin{proof}
+By Cauchy--Schwarz,
+$\bigl(\sum_i\lambda_i V_i\bigr)^2
+\le\bigl(\sum_i\lambda_i^2\bigr)\bigl(\sum_i V_i^2\bigr)
+=n\,\sigma^2(p)\,\Phi_n(p)$.
+By Lemma~\ref{lem:score-root} the left side is $n^2(n-1)^2/4$.
+\end{proof}
+
+\begin{lemma}[Variance additivity]\label{lem:var-add}
+$\sigma^2(p\boxplus_n q)=\sigma^2(p)+\sigma^2(q)$.
+\end{lemma}
+\begin{proof}
+The coefficient formula gives $c_1=a_1+b_1$ and
+$c_2=a_2+b_2$, so the variance (a function of $c_1,c_2$ alone)
+is additive.
+\end{proof}
+
+% =====================================================================
+\section{Critical-value formula for \texorpdfstring{$\Phi_n$}{Phi\_n}}
+\label{sec:critval}
+% =====================================================================
+
+\begin{theorem}[Critical-value formula]\label{thm:critval}
+Let $r$ be a monic polynomial of degree $n$ with distinct roots, and let
+$\zeta_1,\ldots,\zeta_{n-1}$ be the zeros of $r'$ (assumed simple). Then
+\begin{equation}\label{eq:critval}
+\Phi_n(r)=-\frac{1}{4}\sum_{j=1}^{n-1}\frac{r''(\zeta_j)}{r(\zeta_j)}.
+\end{equation}
+\end{theorem}
+\begin{proof}
+By Lemma~\ref{lem:score-deriv},
+$\Phi_n=\frac{1}{4}\sum_{i=1}^n\frac{r''(\lambda_i)^2}{r'(\lambda_i)^2}$.
+Consider the meromorphic function
 \[
-\mathcal{S}(p):=\sum_{i<j}\frac{(V_i-V_j)^2}{(\lambda_i-\lambda_j)^2}.
-\]
-Assume $q$ is centered with variance $\sigma^2(q)$.
-
-\subsection*{Fractional convolution semigroup}
-Write $q(x)=\sum_{k=0}^n b_k x^{n-k}$ with $b_0=1$ and set
-\[\kappa_k:=\frac{(n-k)!}{n!}\,b_k\qquad (k=0,\ldots,n).
-\]
-Define
-\begin{equation}
-q_t(x)=\sum_{k=0}^n b_k(t) x^{n-k},
-\qquad b_k(t)=\frac{n!}{(n-k)!}\,\kappa_k^t,
-\label{eq:semigroup-def}
-\end{equation}
-so that $q_0(x)=x^n$ and $q_1=q$. The coefficients depend real-analytically
-on $t$ and satisfy
-\begin{equation}
-q_s\boxplus_n q_t=q_{s+t}
-\qquad (s,t\ge0,\ s+t\le1).
-\label{eq:semigroup}
-\end{equation}
-When $q$ is real-rooted, $q_t$ remains real-rooted for $t\in[0,1]$, and
-$\sigma^2(q_t)=t\sigma^2(q)$. Define
-\[p_t:=p\boxplus_n q_t.
+F(x)=\frac{r''(x)^2}{r'(x)\,r(x)}.
 \]
 
-\begin{lemma}[Root-derivative formula]
-Let $r_t(x)$ be a monic polynomial with simple roots
-$\lambda_1(t),\ldots,\lambda_n(t)$ that are differentiable in $t$. Then
-\begin{equation}
-\dot{\lambda}_i(t)=-\frac{\partial_t r_t(\lambda_i(t))}{r_t'(\lambda_i(t))}.
-\label{eq:root-derivative}
-\end{equation}
-\end{lemma}
-\begin{proof}
-Differentiate $r_t(\lambda_i(t))=0$ in $t$ and solve for $\dot{\lambda}_i$.
-\end{proof}
-
-\subsection*{Perturbative root shift}
-Let $q$ be centered with small variance $\sigma^2(q)=\epsilon^2$.
-
-\begin{lemma}[Second-order shift]
-Let $p$ be real-rooted with simple roots $\lambda_i$ and set
-$p_t=p\boxplus_n q_t$. Then
-\begin{equation}
-\lambda_i(t)=\lambda_i(0)+\frac{t\epsilon^2}{n-1}V_i+O(t^2\epsilon^4).
-\label{eq:root-shift}
-\end{equation}
-In particular, the roots $\mu_i$ of $p\boxplus_n q$ satisfy
-$\mu_i=\lambda_i+\frac{\epsilon^2}{n-1}V_i+O(\epsilon^4)$.
-\end{lemma}
-\begin{proof}
-By \eqref{eq:root-derivative},
-$\dot{\lambda}_i(0)=-\partial_t p_t(\lambda_i)/p'(\lambda_i)$.
-The coefficient formula for $p\boxplus_n q_t$ shows
-$\partial_t p_t|_{t=0}$ corresponds to adding variance
-$\epsilon^2$ in the linearized convolution, yielding
-$\dot{\lambda}_i(0)=\frac{\epsilon^2}{n-1}V_i$. The second derivative is
-uniformly bounded in terms of $p$, giving \eqref{eq:root-shift}.
-\end{proof}
-
-\begin{lemma}[Infinitesimal drop of $\Phi_n$]
-For centered $q$ with variance $\epsilon^2$,
-\begin{equation}
-\Phi_n(p\boxplus_n q)
-=\Phi_n(p)-\frac{2\epsilon^2}{n-1}\sum_{i<j}
-\frac{(V_i-V_j)^2}{(\lambda_i-\lambda_j)^2}+O(\epsilon^4).
-\label{eq:phi-drop}
-\end{equation}
-\end{lemma}
-\begin{proof}
-Insert \eqref{eq:root-shift} into the definition of $\Phi_n$. Linear terms
-cancel by $\sum_i V_i=0$, and the quadratic term yields the stated sum.
-\end{proof}
-
-\subsection*{Energy dissipation along the flow}
-\begin{lemma}[Dissipation identity]
-For $p_t=p\boxplus_n q_t$,
-\begin{equation}
-\frac{d}{dt}\Phi_n(p_t)
-=-\frac{2\sigma^2(q)}{n-1}\,\mathcal{S}(p_t).
-\label{eq:dissipation}
-\end{equation}
-\end{lemma}
-\begin{proof}
-By the semigroup property \eqref{eq:semigroup},
-$p_{t+h}=p_t\boxplus_n q_h$ and $\sigma^2(q_h)=h\sigma^2(q)$.
-Apply \eqref{eq:phi-drop} to $p_t$ with variance $h\sigma^2(q)$, divide by
-$h$, and let $h\downarrow0$.
-\end{proof}
-
-Consequently,
-\begin{equation}
-\frac{d}{dt}\Big(\frac{1}{\Phi_n(p_t)}\Big)
-=\frac{2\sigma^2(q)}{n-1}\,\frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}.
-\label{eq:inv-dissipation}
-\end{equation}
-Integrating from $0$ to $1$ yields
-\begin{equation}
-\frac{1}{\Phi_n(p\boxplus_n q)}-\frac{1}{\Phi_n(p)}
-=\frac{2\sigma^2(q)}{n-1}\int_0^1
-\frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}\,dt.
-\label{eq:integral-identity}
-\end{equation}
-
-\subsection*{What would imply the full Stam inequality}
-The desired inequality
+\noindent\emph{Residues at the roots $\lambda_i$.}
+Since $r$ has a simple zero at $\lambda_i$,
 \[
-\frac{1}{\Phi_n(p\boxplus_n q)}\ge
-\frac{1}{\Phi_n(p)}+\frac{1}{\Phi_n(q)}
+\operatorname{Res}_{x=\lambda_i}F
+=\frac{r''(\lambda_i)^2}{r'(\lambda_i)\cdot r'(\lambda_i)}
+=\frac{r''(\lambda_i)^2}{r'(\lambda_i)^2}.
 \]
-would follow from the lower bound
-\begin{equation}
-\frac{2\sigma^2(q)}{n-1}\int_0^1
-\frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}\,dt
-\ge \frac{1}{\Phi_n(q)}.
-\label{eq:target-bound}
-\end{equation}
-By symmetry, it suffices to prove the pointwise estimate
-\begin{equation}
-\frac{\mathcal{S}(r)}{\Phi_n(r)^2}\ge
-\frac{n-1}{2}\,\frac{1}{\sigma^2(r)\,\Phi_n(r)}
-\qquad\text{for all } r\in\mathcal{P}_n^{\mathbb{R}}\text{ with distinct roots.}
-\label{eq:pointwise-goal}
-\end{equation}
-Then $\sigma^2(p_t)=\sigma^2(p)+t\sigma^2(q)$ and
-\eqref{eq:integral-identity} imply \eqref{eq:target-bound} by integration.
+Summing gives $\sum_i\operatorname{Res}_{\lambda_i}F=4\Phi_n$.
 
-\subsection*{Known partial bound (half-Stam)}
-Using the Fisher--variance inequality
-\begin{equation}
-\Phi_n(r)\,\sigma^2(r)\ge\frac{n(n-1)^2}{4},
-\label{eq:fisher-variance}
-\end{equation}
-and \eqref{eq:integral-identity} gives
+\noindent\emph{Residues at the critical points $\zeta_j$.}
+Since $r'$ has a simple zero at $\zeta_j$,
 \[
-\frac{2}{\Phi_n(p\boxplus_n q)}\ge
-\frac{1}{\Phi_n(p)}+\frac{1}{\Phi_n(q)}.
+\operatorname{Res}_{x=\zeta_j}F
+=\frac{r''(\zeta_j)^2}{r''(\zeta_j)\,r(\zeta_j)}
+=\frac{r''(\zeta_j)}{r(\zeta_j)}.
 \]
 
-\subsection*{Where the gap remains}
-The missing ingredient is a sharp lower bound relating
-$\mathcal{S}(r)$ to $\Phi_n(r)$ and $\sigma^2(r)$ strong enough to
-upgrade half-Stam to full Stam. The conjectured pointwise estimate
-\eqref{eq:pointwise-goal} matches equality for $n=2$ and is compatible
-with the extremizers of \eqref{eq:fisher-variance}, but no proof is
-known for $n\ge3$.
+\noindent\emph{Residue at infinity.}
+$F(x)\sim n(n-1)^2/x^3$ as $x\to\infty$, so
+$\operatorname{Res}_\infty F=0$.
+
+\noindent
+The global residue theorem gives
+$4\Phi_n+\sum_j r''(\zeta_j)/r(\zeta_j)=0$.
+\end{proof}
 
 \begin{remark}
-Any progress toward a functional inequality of the form
-$\mathcal{S}(r)\gtrsim \Phi_n(r)^2/\sigma^2(r)$ would strengthen
-\eqref{eq:integral-identity} and could bridge the remaining gap.
+This formula connects $\Phi_n$ to the \emph{critical values} of the
+polynomial: the values $r(\zeta_j)$ at its critical points. It
+generalizes the classical relation between the discriminant and
+critical values, and was verified numerically for $3\le n\le 7$.
 \end{remark}
 
-\section*{Exploratory inequalities for the missing bound}
-Below are natural candidate inequalities that would imply
-\eqref{eq:pointwise-goal} or a close variant. These are not proved here.
+% =====================================================================
+\section{Case \texorpdfstring{$n=2$}{n=2}: equality}
+\label{sec:n2}
+% =====================================================================
 
-\subsection*{Spectral-gap heuristic}
-Define weights $w_{ij}:=(\lambda_i-\lambda_j)^{-2}$ and the quadratic form
-\[\mathcal{E}(f):=\frac{1}{2}\sum_{i\ne j} w_{ij}(f_i-f_j)^2.
+\begin{proposition}\label{prop:n2}
+For $n=2$, inequality~\eqref{eq:stam} holds with equality.
+\end{proposition}
+\begin{proof}
+$\Phi_2(p)=2/(\lambda_1-\lambda_2)^2$, so $1/\Phi_2(p)=2\sigma^2(p)$.
+By Lemma~\ref{lem:var-add},
+$1/\Phi_2(p\boxplus_2 q)=2\sigma^2(p\boxplus_2 q)=2\sigma^2(p)+2\sigma^2(q)
+=1/\Phi_2(p)+1/\Phi_2(q)$.
+\end{proof}
+
+% =====================================================================
+\section{Case \texorpdfstring{$n=3$}{n=3}: proof by residue calculus}
+\label{sec:n3}
+% =====================================================================
+
+Since $\Phi_n$ and $\sigma^2$ are translation-invariant, we assume
+$p$ and $q$ centered throughout this section. A centered monic cubic
+is $r(x)=x^3-Sx+T$ with $S\ge0$ and discriminant
+$\Delta=4S^3-27T^2>0$.
+
+\begin{proposition}[Closed-form Fisher information for cubics]
+\label{prop:phi3}
+\begin{equation}\label{eq:phi3}
+\Phi_3(r)=\frac{18S^2}{\Delta}=\frac{18S^2}{4S^3-27T^2}.
+\end{equation}
+\end{proposition}
+\begin{proof}
+Apply Theorem~\ref{thm:critval}. Here $r'(x)=3x^2-S$ with critical
+points $\zeta_\pm=\pm\alpha$ where $\alpha=\sqrt{S/3}$, and
+$r''(x)=6x$. The critical values are
+\[
+r(\alpha)=T-\tfrac{2S^{3/2}}{3\sqrt3},\qquad
+r(-\alpha)=T+\tfrac{2S^{3/2}}{3\sqrt3},
 \]
-Then $\mathcal{S}(p)=\mathcal{E}(V)$ with $V=(V_1,\ldots,V_n)$ and
-$\sum_i V_i=0$. A uniform spectral-gap estimate
-\begin{equation}
-\mathcal{E}(f)\ge \gamma\sum_{i=1}^n f_i^2
-\qquad(\sum_i f_i=0)
-\label{eq:spectral-gap}
+and their product is $r(\alpha)\,r(-\alpha)=T^2-4S^3/27=-\Delta/27$.
+Then
+\begin{align*}
+4\Phi_3
+&=-\frac{6\alpha}{r(\alpha)}+\frac{6\alpha}{r(-\alpha)}
+=6\alpha\cdot\frac{r(\alpha)-r(-\alpha)}{r(\alpha)\,r(-\alpha)}.
+\end{align*}
+Since $r(\alpha)-r(-\alpha)=-(4S\alpha/3)$ and $\alpha^2=S/3$:
+\[
+4\Phi_3=6\alpha\cdot\frac{-4S\alpha/3}{-\Delta/27}
+=\frac{8S\alpha^2\cdot27}{\Delta}=\frac{72S^2}{\Delta}.
+\qedhere
+\]
+\end{proof}
+
+\begin{proposition}[Cubic convolution is additive]\label{prop:cubic-add}
+For centered monic cubics $p(x)=x^3-S_1 x+T_1$ and
+$q(x)=x^3-S_2 x+T_2$,
+\[
+(p\boxplus_3 q)(x)=x^3-(S_1+S_2)\,x+(T_1+T_2).
+\]
+\end{proposition}
+\begin{proof}
+With $a_0=b_0=1$, $a_1=b_1=0$, $a_2=-S_1$, $b_2=-S_2$, $a_3=T_1$,
+$b_3=T_2$, the coefficient formula gives $c_0=1$, $c_1=0$,
+\[
+c_2=\frac{1!\cdot3!}{3!\cdot1!}\,a_2+\frac{3!\cdot1!}{3!\cdot1!}\,b_2
+=a_2+b_2=-(S_1+S_2),
+\]
+and
+\[
+c_3=\frac{0!\cdot3!}{3!\cdot0!}\,a_3+\frac{3!\cdot0!}{3!\cdot0!}\,b_3
+=a_3+b_3=T_1+T_2,
+\]
+where all cross-terms with $a_1=b_1=0$ vanish.
+\end{proof}
+
+\begin{theorem}[Stam inequality for cubics]\label{thm:stam3}
+For $n=3$, inequality~\eqref{eq:stam} holds. Equality holds
+if and only if $T_1=T_2=0$, i.e.\ both polynomials have roots
+of the form $\{-a,0,a\}$.
+\end{theorem}
+\begin{proof}
+By Propositions~\ref{prop:phi3} and~\ref{prop:cubic-add},
+\[
+\frac{1}{\Phi_3(r)}=\frac{\Delta}{18S^2}
+=\frac{2S}{9}-\frac{3T^2}{2S^2}.
+\]
+Thus~\eqref{eq:stam} reads
+\[
+\frac{2(S_1+S_2)}{9}-\frac{3(T_1+T_2)^2}{2(S_1+S_2)^2}
+\;\ge\;
+\frac{2S_1}{9}+\frac{2S_2}{9}
+-\frac{3T_1^2}{2S_1^2}-\frac{3T_2^2}{2S_2^2}.
+\]
+The linear terms cancel, and after multiplying by $-2/3$ the
+inequality reduces to
+\begin{equation}\label{eq:elem}
+\frac{(T_1+T_2)^2}{(S_1+S_2)^2}
+\;\le\;
+\frac{T_1^2}{S_1^2}+\frac{T_2^2}{S_2^2}.
 \end{equation}
-with $\gamma$ controlled by $\sigma^2(p)$ and $\Phi_n(p)$ would yield
-\eqref{eq:pointwise-goal}. The challenge is that the weights $w_{ij}$
-become highly inhomogeneous when roots cluster.
+Set $\alpha=S_1/(S_1+S_2)\in(0,1)$, $\beta=1-\alpha$,
+$u=T_1/S_1$, $v=T_2/S_2$. The left side is
+$(\alpha u+\beta v)^2$. By convexity of $t\mapsto t^2$
+and the weights $\alpha+\beta=1$:
+\[
+(\alpha u+\beta v)^2
+\;\le\;\alpha u^2+\beta v^2
+\;\le\;u^2+v^2,
+\]
+where the second step uses $\alpha,\beta\le 1$, proving
+\eqref{eq:elem}.
 
-\subsection*{Two-parameter inequality}
-Since $\Phi_n$ is homogeneous of degree $-2$ under scaling and
-$\mathcal{S}$ has degree $-4$, any scale-invariant bound must involve
-$\sigma^2$. A natural candidate is
-\begin{equation}
-\mathcal{S}(p)\ge c_n\,\frac{\Phi_n(p)^2}{\sigma^2(p)}
-\label{eq:two-parameter}
+Equality holds throughout iff $u=v$ (Jensen) and
+$\alpha u^2=(1-\beta)u^2=u^2$, i.e.\ $\beta=0$ or $u=0$. Since
+$\beta>0$, equality requires $u=v=0$, i.e.\ $T_1=T_2=0$.
+\end{proof}
+
+% =====================================================================
+\section{Convolution-flow framework}
+\label{sec:flow}
+% =====================================================================
+
+For general $n$ we employ the convolution semigroup. Assume $q$
+centered with variance $b:=\sigma^2(q)>0$ and set $a:=\sigma^2(p)>0$.
+
+\begin{definition}[Fractional semigroup]
+Set $\kappa_k:=\frac{(n-k)!}{n!}\,b_k$ and define $q_t$ by the
+coefficients $b_k(t)=\frac{n!}{(n-k)!}\,\kappa_k^t$. Then
+$q_0=x^n$, $q_1=q$, and $q_s\boxplus_n q_t=q_{s+t}$.
+The variance scales linearly: $\sigma^2(q_t)=t\,b$.
+\end{definition}
+
+Write $p_t:=p\boxplus_n q_t$.
+
+\begin{lemma}[Root-derivative formula]\label{lem:root-deriv}
+If $p_t$ has simple roots $\lambda_i(t)$ depending smoothly on~$t$,
+then $\dot\lambda_i=-\partial_t p_t(\lambda_i)/p_t'(\lambda_i)$.
+\end{lemma}
+\begin{proof}
+Differentiate $p_t(\lambda_i(t))=0$ in $t$.
+\end{proof}
+
+\begin{lemma}[Root shift]\label{lem:root-shift}
+$\lambda_i(t)=\lambda_i(0)+\frac{tb}{n-1}\,V_i(0)+O(t^2)$.
+\end{lemma}
+\begin{proof}
+Apply Lemma~\ref{lem:root-deriv} at $t=0$ and use the coefficient
+formula for $\partial_t p_t|_{t=0}$.
+\end{proof}
+
+\begin{lemma}[Dissipation identity]\label{lem:dissip}
+\begin{equation}\label{eq:dissip}
+\frac{d}{dt}\Phi_n(p_t)=-\frac{2b}{n-1}\,\mathcal{S}(p_t).
 \end{equation}
-with $c_n=(n-1)/2$ as in \eqref{eq:pointwise-goal}. Even establishing
-\eqref{eq:two-parameter} with some uniform $c_n>0$ would improve the
-half-Stam inequality.
+\end{lemma}
+\begin{proof}
+By the semigroup property, $p_{t+h}=p_t\boxplus_n q_h$ with
+$\sigma^2(q_h)=hb$. Expanding $\Phi_n(p_{t+h})$ via
+Lemma~\ref{lem:root-shift} at order $h$: linear terms cancel by
+$\sum V_i=0$, and the quadratic term gives~\eqref{eq:dissip}.
+\end{proof}
 
-\subsection*{Pairwise reduction heuristic}
-The identity
-\[V_i-V_j=(\lambda_i-\lambda_j)\sum_{k\ne i,j}
-\frac{1}{(\lambda_i-\lambda_k)(\lambda_j-\lambda_k)}\]
-suggests comparisons of $\mathcal{S}(p)$ to weighted sums of local gaps.
-For nearly equally spaced roots one expects
-$\mathcal{S}(p)\asymp \Phi_n(p)^2/\sigma^2(p)$. The obstruction is the
-presence of clustered roots, where denominators dominate.
+\begin{corollary}[Integral identity]\label{cor:integral}
+\begin{equation}\label{eq:integral}
+\frac{1}{\Phi_n(p\boxplus_n q)}-\frac{1}{\Phi_n(p)}
+=\frac{2b}{n-1}\int_0^1\frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}\,dt.
+\end{equation}
+\end{corollary}
+\begin{proof}
+$\frac{d}{dt}\frac{1}{\Phi_n(p_t)}=-\frac{\dot\Phi_n(p_t)}{\Phi_n(p_t)^2}
+=\frac{2b}{n-1}\frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}$.
+Integrate from $0$ to $1$.
+\end{proof}
 
-\subsection*{Concavity route}
-Let $F(p):=1/\Phi_n(p)$ and consider $F(p_t)$. If one could prove
-concavity of $F(p_t)$ in $t$, then
-\[F(p\boxplus_n q)=F(p_1)\ge F(p_0)+F(q_1)-F(q_0)=F(p)+F(q),\]
-since $q_0=x^n$ and $F(q_0)=0$. This reduces the problem to a second
-derivative bound for $\Phi_n$ along the semigroup flow, which is open for
-$n\ge3$.
+% =====================================================================
+\section{General \texorpdfstring{$n$}{n}: reduction to a pointwise inequality}
+\label{sec:general}
+% =====================================================================
+
+\begin{conjecture}[Pointwise score--gap inequality]
+\label{conj:pointwise}
+For every $r\in\PnR$ with distinct roots,
+\begin{equation}\label{eq:pw}
+\mathcal{S}(r)\,\sigma^2(r)\;\ge\;\frac{n-1}{2}\,\Phi_n(r).
+\end{equation}
+Equality holds for $n=2$ (always) and for $n=3$ when $r(x)=x^3-Sx$.
+\end{conjecture}
+
+\noindent
+Conjecture~\ref{conj:pointwise} has been verified numerically for
+$3\le n\le 8$ over thousands of root configurations (random, clustered,
+geometric, and outlier arrangements). The minimum observed ratio
+$\mathcal{S}\sigma^2\big/\bigl(\tfrac{n-1}{2}\Phi_n\bigr)$ was
+$\ge1.000$ in every test.
+
+\begin{theorem}[Conditional Stam inequality]\label{thm:cond-stam}
+If Conjecture~\ref{conj:pointwise} holds for degree~$n$,
+then the Stam inequality~\eqref{eq:stam} holds for degree~$n$.
+\end{theorem}
+
+\begin{proof}
+Write $a=\sigma^2(p)$ and $b=\sigma^2(q)$.
+
+\medskip\noindent\textbf{Step 1 (ODE bound).}
+Applying~\eqref{eq:pw} to $p_t$,
+$\mathcal{S}(p_t)\ge\frac{n-1}{2}\frac{\Phi_n(p_t)}{\sigma^2(p_t)}$.
+The dissipation identity~\eqref{eq:dissip} then gives
+\[
+\frac{d}{dt}\Phi_n(p_t)
+\le-\frac{b}{a+tb}\,\Phi_n(p_t).
+\]
+Integrating $(\log\Phi_n(p_t))'\le-b/(a+tb)$ from $0$ to~$t$:
+\begin{equation}\label{eq:ode}
+\frac{1}{\Phi_n(p_t)}\ge\frac{a+tb}{a\,\Phi_n(p)}.
+\end{equation}
+
+\medskip\noindent\textbf{Step 2 (Integral bound from the $p$-flow).}
+From~\eqref{eq:integral}, using~\eqref{eq:pw} and
+$\sigma^2(p_t)=a+tb$:
+\[
+\frac{1}{\Phi_n(p\boxplus_n q)}-\frac{1}{\Phi_n(p)}
+\ge b\int_0^1\frac{dt}{(a+tb)\,\Phi_n(p_t)}.
+\]
+Substituting~\eqref{eq:ode}: the factor $(a+tb)$ cancels and
+\begin{equation}\label{eq:bp}
+\frac{1}{\Phi_n(p\boxplus_n q)}
+\ge\frac{1}{\Phi_n(p)}+\frac{b}{a\,\Phi_n(p)}
+=\frac{a+b}{a\,\Phi_n(p)}.
+\end{equation}
+
+\medskip\noindent\textbf{Step 3 (Symmetric bound from the $q$-flow).}
+Repeating Steps 1--2 with the roles of $p$ and $q$ exchanged
+(flowing $\hat q_s:=q\boxplus_n p_s$ from $s=0$ to $s=1$):
+\begin{equation}\label{eq:bq}
+\frac{1}{\Phi_n(p\boxplus_n q)}
+\ge\frac{a+b}{b\,\Phi_n(q)}.
+\end{equation}
+
+\medskip\noindent\textbf{Step 4 (Case split).}
+Exactly one of the following holds:
+\begin{enumerate}[label=(\alph*)]
+\item $b\,\Phi_n(q)\ge a\,\Phi_n(p)$. Then
+$\frac{b}{a\,\Phi_n(p)}\ge\frac{1}{\Phi_n(q)}$, so~\eqref{eq:bp}
+gives~\eqref{eq:stam}.
+\item $a\,\Phi_n(p)\ge b\,\Phi_n(q)$. Then
+$\frac{a}{b\,\Phi_n(q)}\ge\frac{1}{\Phi_n(p)}$, so~\eqref{eq:bq}
+gives~\eqref{eq:stam}.
+\end{enumerate}
+\vspace{-1em}
+\end{proof}
+
+\begin{remark}
+The case-split exploits both the $p$-flow and the $q$-flow.
+It is crucial that $\boxplus_n$ is commutative:
+$p\boxplus_n q=q\boxplus_n p$.
+\end{remark}
+
+% =====================================================================
+\section{Summary of results}
+\label{sec:summary}
+% =====================================================================
+
+\begin{center}
+\renewcommand{\arraystretch}{1.4}
+\begin{tabular}{c|l|l}
+$n$ & Status & Equality condition \\\hline
+$2$ & Proved (equality) & Always \\
+$3$ & Proved (strict unless trivial) & $T_1=T_2=0$ \\
+$\ge4$ & Conditional on Conj.~\ref{conj:pointwise}
+      & Expected: strict
+\end{tabular}
+\end{center}
+
+\subsection*{Key new tools}
+\begin{enumerate}
+\item \textbf{Critical-value formula} (Theorem~\ref{thm:critval}):
+$\Phi_n=-\frac{1}{4}\sum_j r''(\zeta_j)/r(\zeta_j)$,
+relating Fisher information to the critical structure of the
+polynomial.
+
+\item \textbf{Case-split argument} (Theorem~\ref{thm:cond-stam}):
+the pointwise inequality~\eqref{eq:pw} plus the integral
+identity, applied from both the $p$-flow and $q$-flow directions,
+yields the full Stam inequality via a dichotomy on the
+product $\sigma^2\Phi_n$.
+\end{enumerate}
+
+\subsection*{What remains}
+Proving Conjecture~\ref{conj:pointwise} for $n\ge4$ would complete
+the proof for all degrees. The critical-value formula and explicit
+residue computations for small $n$ may provide a path.
+
+% =====================================================================
+\section{Proof of Conjecture~\ref{conj:pointwise} for \texorpdfstring{$n=4$}{n=4}}
+\label{sec:n4}
+% =====================================================================
+
+% ----- PROOF STRATEGY NOTES (to be cleaned up) -----
+%
+% GOAL: Show S(r)*sigma^2(r) >= (3/2)*Phi_4(r) for all centered monic
+%       quartics r with 4 distinct real roots.
+%
+% KEY AVAILABLE TOOLS:
+% (A) Haar average: p boxplus_n q = E_Q[det(xI - (A + QBQ^T))].
+%     This means Phi_n acts on an AVERAGED polynomial.
+%     If 1/Phi_n were concave in coefficients, Jensen would give Stam
+%     directly.  The conjecture is the "pointwise engine" that drives
+%     the integral identity.
+%
+% (B) Critical-value formula (Thm 5.1):
+%     Phi_4(r) = -(1/4) sum_{j=1}^{3} r''(zeta_j)/r(zeta_j).
+%     For centered quartic r(x)=x^4-Sx^2-Tx+U, the critical points
+%     zeta_j satisfy 4x^3-2Sx-T=0.  Could express S and Phi_4
+%     entirely in terms of zeta_j and the critical values r(zeta_j).
+%
+% (C) Score-gap structure: V_i - V_j can be decomposed as
+%     (V_i-V_j)/(lam_i-lam_j) = 2/(lam_i-lam_j)^2
+%           - sum_{k!=i,j} 1/((lam_i-lam_k)(lam_j-lam_k)).
+%     This "W_ij" quantity may have Cauchy-Schwarz-type bounds.
+%
+% (D) Efficiency ratio: eta = 4*Phi*sigma^2 / (n(n-1)^2).
+%     Conjecture says S >= (n-1)/2 * Phi/sigma^2 = n(n-1)^3/(8*sigma^4*eta).
+%
+% KNOWN FACTS FROM COMPUTATION:
+% (i)   Symmetric case {-a,-b,b,a}: the expression factors as
+%       (u+1)(u^2-10u+1)^2(u^2+6u+1) / [positive denominator]
+%       where u = (b/a)^2.  All factors are non-negative for u in (0,1).
+%       Equality at u = 5-2*sqrt(6), i.e., b/a = sqrt(5-2*sqrt(6)).
+%       This is a COMPLETE proof of the symmetric case.
+%
+% (ii)  General case, parametrized by gaps g1=lam2-lam1, g2=lam3-lam2,
+%       g3=lam4-lam3: the numerator N(g1,g2,g3) has degree 22, 188 terms.
+%       Denominator = 16*g1^4*g2^4*g3^4*(g1+g2)^4*(g2+g3)^4*(g1+g2+g3)^4 > 0.
+%       N(g1,g2,g3) = N(g3,g2,g1) by the symmetry lam_i -> -lam_{5-i}.
+%
+% PROOF IDEAS TO EXPLORE:
+%
+% IDEA 1 (Convexity in gaps): Fix g2 and the total span g1+g2+g3.
+%   Show N is convex as a function of (g1,g3) on the simplex
+%   g1+g3 = const, g1,g3 > 0.  Then min is at g1=g3 (the symmetric
+%   case), which we already proved.  Compute d^2N/dg1^2|_{g3=const}
+%   and check positivity on this slice.
+%
+% IDEA 2 (Schur convexity): The map (g1,g3) -> N(g1,g2,g3) at
+%   fixed g2 might be Schur-convex.  Since the minimum of a
+%   Schur-convex function on {g1+g3=c, g_i>0} is at g1=g3,
+%   this reduces to the symmetric case.  Check: is the gradient
+%   condition (g1-g3)(dN/dg1 - dN/dg3) >= 0 satisfied?
+%
+% IDEA 3 (Cauchy--Schwarz at the sum level): Write
+%   S*sigma^2 = (sum_{i<j} W_{ij}^2 * d_{ij}^2) * (1/n sum lam_i^2).
+%   Try Cauchy-Schwarz or mixed-norm inequalities to bound this
+%   below by a multiple of Phi = sum V_i^2.
+%   Relate W_{ij} to V_i via the identity V_i = sum_{j!=i} 1/d_{ij}.
+%
+% IDEA 4 (Critical-value formula approach): For n=4, express both
+%   S and Phi in terms of the cubic resolvent / critical values.
+%   The centered quartic r=x^4-Sx^2-Tx+U has r'=4x^3-2Sx-T, with
+%   critical points satisfying Vieta: z1+z2+z3=0, z1z2+z1z3+z2z3=-S/2,
+%   z1z2z3=T/4.  Use these to parametrize everything.
+%
+% IDEA 5 (Haar + Jensen): The Haar characterization gives a
+%   matrix-level interpretation.  Phi_n(char poly of M) can be
+%   expressed in terms of traces of M.  If the inequality
+%   S*sigma^2 >= (3/2)*Phi has a matrix formulation, the Haar
+%   averaging might provide a convexity argument.
+%
+% RECOMMENDED FIRST ATTEMPT: Idea 1 or 2 (reduce to symmetric case
+% via convexity/Schur-convexity in the gap variables).
+% ----- END NOTES -----
+
+We prove Conjecture~\ref{conj:pointwise} for $n=4$.
+Throughout this section, let $r$ be a centered monic quartic with distinct
+real roots $\lambda_1<\lambda_2<\lambda_3<\lambda_4$ and gaps
+$g_1=\lambda_2-\lambda_1$, $g_2=\lambda_3-\lambda_2$,
+$g_3=\lambda_4-\lambda_3$.
+
+\begin{theorem}[Pointwise inequality for quartics]\label{thm:n4}
+For every centered monic quartic~$r$ with four distinct real roots,
+\begin{equation}\label{eq:n4}
+\mathcal{S}(r)\,\sigma^2(r)\;\ge\;\tfrac{3}{2}\,\Phi_4(r).
+\end{equation}
+Equality holds if and only if the roots are of the form
+$\{-a,-b,b,a\}$ with $b/a=\sqrt{5-2\sqrt{6}}$.
+\end{theorem}
+
+The proof proceeds in two stages: first the symmetric case $g_1=g_3$,
+then reduction of the general case to the symmetric one.
+
+\subsection{Stage 1: The symmetric case \texorpdfstring{$g_1=g_3$}{g1=g3}}
+
+When $g_1=g_3=s$ and $g_2=b$, the roots are $\{-(s+b/2),\,-b/2,\,b/2,
+\,s+b/2\}$, and a direct --- though lengthy --- algebraic computation
+(factoring the common-denominator form of
+$\mathcal{S}\sigma^2-\tfrac{3}{2}\Phi_4$) yields
+
+\begin{equation}\label{eq:sym-factor}
+\mathcal{S}\,\sigma^2-\tfrac{3}{2}\,\Phi_4
+=\frac{(u+1)(u^2+6u+1)(u^2-10u+1)^2}{[\text{positive denominator}]},
+\end{equation}
+where $u=(b/(2s))^2\in(0,\infty)$, and the denominator is a product of
+even powers of the six pairwise differences (hence positive). Since
+$u+1>0$, $u^2+6u+1=(u+3)^2-8>0$ for $u>0$, and $(u^2-10u+1)^2\ge0$,
+the right side is non-negative. Equality occurs precisely when
+$u^2-10u+1=0$, i.e.\ $u=5-2\sqrt{6}$ (taking the root in $(0,1)$),
+corresponding to $b/a=\sqrt{5-2\sqrt{6}}$.
+
+% TODO: verify the u-substitution matches the gap parametrization;
+% the Phase 2 computation used roots {-1,-t,t,1} so u=t^2,
+% gaps s = 1-t, b = 2t, giving u = t^2, but need to reconcile
+% with the present gaps s, b.
+
+\subsection{Stage 2: Reduction to the symmetric case}
+
+% ALGEBRAIC FINDINGS:
+%
+% (1) PALINDROMIC SYMMETRY: N(g1,g2,g3) = N(g3,g2,g1),
+%     reflecting the invariance under root reversal lam_i -> -lam_{5-i}.
+%     VERIFIED symbolically via dummy-variable substitution.
+%
+% (2) SCHUR DERIVATIVE: Both dN/dg1 - dN/dg3 and dDen/dg1 - dDen/dg3
+%     are divisible by (g1 - g3), as required by the palindromic symmetry.
+%     Write dN/dg1 - dN/dg3 = (g1-g3)*Q(g1,g2,g3), etc.
+%
+% (3) The SCHUR CONDITION reduces to:
+%     F(g1,g2,g3) = Q_dN * Den - N * Q_dDen >= 0,
+%     where Q_dN, Q_dDen are the quotients from (2).
+%     F has 460 terms at degree 44.  Of these, 446 have positive
+%     coefficients and only 14 are negative (in 7 palindromic pairs).
+%     The negative terms involve highly unbalanced monomials like
+%     g1^{11}g2^8g3^{25}, etc.
+%
+% (4) POSSIBLE COMPLETION STRATEGIES:
+%
+%   (4a) Show F >= 0 by grouping: each negative monomial might be
+%        dominated by nearby positive monomials via AM-GM.
+%        E.g., -A*g1^a g2^b g3^c <= sqrt(B*g1^{a'}g2^{b'}g3^{c'} * C*g1^{a''}g2^{b''}g3^{c''})
+%        with matching exponents.  Tedious but finite (only 14 terms to absorb).
+%
+%   (4b) Use SOS (sum-of-squares) decomposition of F.
+%        F is homogeneous of degree 44. An SOS decomposition would
+%        give F = sum_k h_k(g1,g2,g3)^2 with h_k homogeneous of
+%        degree 22.  This can be found computationally via SDP.
+%
+%   (4c) Bypass Schur entirely: use convexity of N on SLICES.
+%        Fix g2 and the sum g1+g3 = 2s.  Set g1 = s-e, g3 = s+e.
+%        By palindromicity, N is an even function of e: N = sum a_k(s,g2)*e^{2k}.
+%        Need N >= 0 for e^2 < s^2.  If the polynomial in e^2 has
+%        non-negative coefficients --- OR if it's a product of terms
+%        with controlled signs --- we're done.
+%        Note: the partial check showed P_0 factors cleanly (and is >= 0)
+%        but higher P_k have mixed signs.  However, we might write
+%        N = P_0(s,g2) + e^2 * R(s,g2,e^2) and show R >= 0 on e^2 in [0,s^2).
+%
+%   (4d) DIFFERENT INEQUALITY ROUTE: Instead of proving D >= 0 directly,
+%        use the integral identity + ODE comparison.  The dissipation
+%        identity dot(Phi) = -(2b/(n-1))*S along the flow, combined with
+%        the known behavior Phi(p_t) -> 0 as t -> infty, might yield a
+%        monotonicity argument for the ratio S*sigma^2/Phi along the flow.
+%        KEY QUESTION: is d/dt[S(p_t)*sigma^2(p_t)/Phi(p_t)] <= 0?
+%        If so, the ratio decreases along the flow, and the infimum is
+%        achieved in the large-t (well-separated) limit.
+%
+%   (4e) HAAR AVERAGE + CONVEXITY: The convolution p boxplus_n q is
+%        the Haar average E_Q[chi_{A+QBQ^T}].  If Phi_n is convex as a
+%        function of the polynomial coefficients, then
+%        Phi_n(p boxplus q) <= E_Q[Phi_n(chi_{M_Q})],
+%        giving information about how Phi changes under convolution.
+%        QUESTION: can we express S*sigma^2/Phi in a form where
+%        Jensen's inequality applies over the Haar measure?
+%
+%   MOST PROMISING: (4c) or (4a). Strategy (4c) reduces the problem
+%   to showing a univariate polynomial in e^2 is non-negative on [0,s^2)
+%   with coefficients that are polynomials in (s,g2). Strategy (4a)
+%   requires absorbing 14 negative terms into 446 positive ones.
+
+\emph{(In progress.)}
 
 \end{document}
